@@ -20,10 +20,13 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.security.AccessController;
+import java.security.PrivilegedAction;
+import java.security.PrivilegedActionException;
+import java.security.PrivilegedExceptionAction;
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -35,22 +38,22 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Supplier;
 
-import jakarta.servlet.ServletOutputStream;
-import jakarta.servlet.ServletResponse;
-import jakarta.servlet.SessionTrackingMode;
-import jakarta.servlet.http.Cookie;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpServletResponseWrapper;
+import javax.servlet.ServletOutputStream;
+import javax.servlet.ServletResponse;
+import javax.servlet.SessionTrackingMode;
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpServletResponseWrapper;
 
 import org.apache.catalina.Context;
 import org.apache.catalina.Session;
+import org.apache.catalina.security.SecurityUtil;
 import org.apache.catalina.util.SessionConfig;
 import org.apache.coyote.ActionCode;
-import org.apache.coyote.ContinueResponseTiming;
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
 import org.apache.tomcat.util.buf.CharChunk;
-import org.apache.tomcat.util.buf.CharsetHolder;
 import org.apache.tomcat.util.buf.UEncoder;
 import org.apache.tomcat.util.buf.UEncoder.SafeCharsSet;
 import org.apache.tomcat.util.buf.UriUtil;
@@ -74,9 +77,72 @@ public class Response implements HttpServletResponse {
     private static final MediaTypeCache MEDIA_TYPE_CACHE = new MediaTypeCache(100);
 
     /**
+     * Compliance with SRV.15.2.22.1. A call to Response.getWriter() if no
+     * character encoding has been specified will result in subsequent calls to
+     * Response.getCharacterEncoding() returning ISO-8859-1 and the Content-Type
+     * response header will include a charset=ISO-8859-1 component.
+     */
+    private static final boolean ENFORCE_ENCODING_IN_GET_WRITER;
+
+    static {
+        ENFORCE_ENCODING_IN_GET_WRITER = Boolean.parseBoolean(
+                System.getProperty("org.apache.catalina.connector.Response.ENFORCE_ENCODING_IN_GET_WRITER",
+                        "true"));
+    }
+
+
+    // ----------------------------------------------------- Instance Variables
+
+    /**
+     * The date format we will use for creating date headers.
+     *
+     * @deprecated Unused. This will be removed in Tomcat 10
+     */
+    @Deprecated
+    protected SimpleDateFormat format = null;
+
+
+    public Response() {
+        this(OutputBuffer.DEFAULT_BUFFER_SIZE);
+    }
+
+
+    public Response(int outputBufferSize) {
+        outputBuffer = new OutputBuffer(outputBufferSize);
+    }
+
+
+    // ------------------------------------------------------------- Properties
+
+    /**
      * Coyote response.
      */
-    protected final org.apache.coyote.Response coyoteResponse;
+    protected org.apache.coyote.Response coyoteResponse;
+
+    /**
+     * Set the Coyote response.
+     *
+     * @param coyoteResponse The Coyote response
+     */
+    public void setCoyoteResponse(org.apache.coyote.Response coyoteResponse) {
+        this.coyoteResponse = coyoteResponse;
+        outputBuffer.setResponse(coyoteResponse);
+    }
+
+    /**
+     * @return the Coyote response.
+     */
+    public org.apache.coyote.Response getCoyoteResponse() {
+        return this.coyoteResponse;
+    }
+
+
+    /**
+     * @return the Context within which this Request is being processed.
+     */
+    public Context getContext() {
+        return request.getContext();
+    }
 
 
     /**
@@ -139,43 +205,24 @@ public class Response implements HttpServletResponse {
     protected final CharChunk redirectURLCC = new CharChunk();
 
 
+    /*
+     * Not strictly required but it makes generating HTTP/2 push requests a lot
+     * easier if these are retained until the response is recycled.
+     */
+    private final List<Cookie> cookies = new ArrayList<>();
+
     private HttpServletResponse applicationResponse = null;
-
-
-    public Response(org.apache.coyote.Response coyoteResponse) {
-        this(coyoteResponse, OutputBuffer.DEFAULT_BUFFER_SIZE);
-    }
-
-
-    public Response(org.apache.coyote.Response coyoteResponse, int outputBufferSize) {
-        this.coyoteResponse = coyoteResponse;
-        outputBuffer = new OutputBuffer(outputBufferSize, coyoteResponse);
-    }
 
 
     // --------------------------------------------------------- Public Methods
 
     /**
-     * @return the Coyote response.
-     */
-    public org.apache.coyote.Response getCoyoteResponse() {
-        return this.coyoteResponse;
-    }
-
-
-    /**
-     * @return the Context within which this Request is being processed.
-     */
-    public Context getContext() {
-        return request.getContext();
-    }
-
-
-    /**
-     * Release all object references, and initialize instance variables, in preparation for reuse of this object.
+     * Release all object references, and initialize instance variables, in
+     * preparation for reuse of this object.
      */
     public void recycle() {
 
+        cookies.clear();
         outputBuffer.recycle();
         usingOutputStream = false;
         usingWriter = false;
@@ -204,11 +251,17 @@ public class Response implements HttpServletResponse {
     }
 
 
+    public List<Cookie> getCookies() {
+        return cookies;
+    }
+
+
     // ------------------------------------------------------- Response Methods
 
     /**
-     * @return the number of bytes the application has actually written to the output stream. This excludes chunking,
-     *             compression, etc. as well as headers.
+     * @return the number of bytes the application has actually written to the
+     * output stream. This excludes chunking, compression, etc. as well as
+     * headers.
      */
     public long getContentWritten() {
         return outputBuffer.getContentWritten();
@@ -216,9 +269,8 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * @return the number of bytes the actually written to the socket. This includes chunking, compression, etc. but
-     *             excludes headers.
-     *
+     * @return the number of bytes the actually written to the socket. This
+     * includes chunking, compression, etc. but excludes headers.
      * @param flush if <code>true</code> will perform a buffer flush first
      */
     public long getBytesWritten(boolean flush) {
@@ -248,8 +300,9 @@ public class Response implements HttpServletResponse {
      * @return <code>true</code> if the application has committed the response
      */
     public boolean isAppCommitted() {
-        return this.appCommitted || isCommitted() || isSuspended() ||
-                ((getContentLength() > 0) && (getContentWritten() >= getContentLength()));
+        return this.appCommitted || isCommitted() || isSuspended()
+                || ((getContentLength() > 0)
+                    && (getContentWritten() >= getContentLength()));
     }
 
 
@@ -261,7 +314,7 @@ public class Response implements HttpServletResponse {
     /**
      * @return the Request with which this Response is associated.
      */
-    public Request getRequest() {
+    public org.apache.catalina.connector.Request getRequest() {
         return this.request;
     }
 
@@ -270,7 +323,7 @@ public class Response implements HttpServletResponse {
      *
      * @param request The new associated request
      */
-    public void setRequest(Request request) {
+    public void setRequest(org.apache.catalina.connector.Request request) {
         this.request = request;
     }
 
@@ -282,7 +335,8 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * @return the <code>ServletResponse</code> for which this object is the facade.
+     * @return the <code>ServletResponse</code> for which this object
+     * is the facade.
      */
     public HttpServletResponse getResponse() {
         if (facade == null) {
@@ -296,10 +350,13 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Set a wrapped HttpServletResponse to pass to the application. Components wishing to wrap the response should
-     * obtain the response via {@link #getResponse()}, wrap it and then call this method with the wrapped response.
+     * Set a wrapped HttpServletResponse to pass to the application. Components
+     * wishing to wrap the response should obtain the response via
+     * {@link #getResponse()}, wrap it and then call this method with the
+     * wrapped response.
      *
-     * @param applicationResponse The wrapped response to pass to the application
+     * @param applicationResponse The wrapped response to pass to the
+     *        application
      */
     public void setResponse(HttpServletResponse applicationResponse) {
         // Check the wrapper wraps this request
@@ -345,10 +402,12 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Set the error flag if not already set.
+     * Set the error flag.
+     *
+     * @return <code>false</code> if the error flag was already set
      */
-    public void setError() {
-        getCoyoteResponse().setError();
+    public boolean setError() {
+        return getCoyoteResponse().setError();
     }
 
 
@@ -372,13 +431,9 @@ public class Response implements HttpServletResponse {
     }
 
 
-    public void resetError() {
-        getCoyoteResponse().resetError();
-    }
-
-
     /**
-     * Perform whatever actions are required to flush and close the output stream or writer, in a single operation.
+     * Perform whatever actions are required to flush and close the output
+     * stream or writer, in a single operation.
      *
      * @exception IOException if an input/output error occurs
      */
@@ -396,6 +451,10 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * @return the content type that was set or calculated for this response,
+     * or <code>null</code> if no content type was set.
+     */
     @Override
     public String getContentType() {
         return getCoyoteResponse().getContentType();
@@ -403,12 +462,14 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Return a PrintWriter that can be used to render error messages, regardless of whether a stream or writer has
-     * already been acquired.
+     * Return a PrintWriter that can be used to render error messages,
+     * regardless of whether a stream or writer has already been acquired.
      *
-     * @return Writer which can be used for error reports. If the response is not an error report returned using
-     *             sendError or triggered by an unexpected exception thrown during the servlet processing (and only in
-     *             that case), null will be returned if the response stream has already been used.
+     * @return Writer which can be used for error reports. If the response is
+     * not an error report returned using sendError or triggered by an
+     * unexpected exception thrown during the servlet processing
+     * (and only in that case), null will be returned if the response stream
+     * has already been used.
      *
      * @exception IOException if an input/output error occurs
      */
@@ -428,41 +489,64 @@ public class Response implements HttpServletResponse {
     // ------------------------------------------------ ServletResponse Methods
 
 
+    /**
+     * Flush the buffer and commit this response.
+     *
+     * @exception IOException if an input/output error occurs
+     */
     @Override
     public void flushBuffer() throws IOException {
         outputBuffer.flush();
     }
 
 
+    /**
+     * @return the actual buffer size used for this Response.
+     */
     @Override
     public int getBufferSize() {
         return outputBuffer.getBufferSize();
     }
 
 
+    /**
+     * @return the character encoding used for this Response.
+     */
     @Override
     public String getCharacterEncoding() {
-        String charset = getCoyoteResponse().getCharsetHolder().getName();
-        if (charset == null) {
-            Context context = getContext();
-            if (context != null) {
-                charset = context.getResponseCharacterEncoding();
-            }
+        String charset = getCoyoteResponse().getCharacterEncoding();
+        if (charset != null) {
+            return charset;
         }
 
-        if (charset == null) {
-            charset = org.apache.coyote.Constants.DEFAULT_BODY_CHARSET.name();
+        Context context = getContext();
+        String result = null;
+        if (context != null) {
+            result =  context.getResponseCharacterEncoding();
         }
 
-        return charset;
+        if (result == null) {
+            result = org.apache.coyote.Constants.DEFAULT_BODY_CHARSET.name();
+        }
+
+        return result;
     }
 
 
+    /**
+     * @return the servlet output stream associated with this Response.
+     *
+     * @exception IllegalStateException if <code>getWriter</code> has
+     *  already been called for this response
+     * @exception IOException if an input/output error occurs
+     */
     @Override
-    public ServletOutputStream getOutputStream() throws IOException {
+    public ServletOutputStream getOutputStream()
+        throws IOException {
 
         if (usingWriter) {
-            throw new IllegalStateException(sm.getString("coyoteResponse.getOutputStream.ise"));
+            throw new IllegalStateException
+                (sm.getString("coyoteResponse.getOutputStream.ise"));
         }
 
         usingOutputStream = true;
@@ -474,27 +558,43 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * @return the Locale assigned to this response.
+     */
     @Override
     public Locale getLocale() {
         return getCoyoteResponse().getLocale();
     }
 
 
+    /**
+     * @return the writer associated with this Response.
+     *
+     * @exception IllegalStateException if <code>getOutputStream</code> has
+     *  already been called for this response
+     * @exception IOException if an input/output error occurs
+     */
     @Override
-    public PrintWriter getWriter() throws IOException {
+    public PrintWriter getWriter()
+        throws IOException {
 
         if (usingOutputStream) {
-            throw new IllegalStateException(sm.getString("coyoteResponse.getWriter.ise"));
+            throw new IllegalStateException
+                (sm.getString("coyoteResponse.getWriter.ise"));
         }
 
-        if (request.getConnector().getEnforceEncodingInGetWriter()) {
+        if (ENFORCE_ENCODING_IN_GET_WRITER) {
             /*
-             * If the response's character encoding has not been specified as described in
-             * <code>getCharacterEncoding</code> (i.e., the method just returns the default value
-             * <code>ISO-8859-1</code>), <code>getWriter</code> updates it to <code>ISO-8859-1</code> (with the effect
-             * that a subsequent call to getContentType() will include a charset=ISO-8859-1 component which will also be
-             * reflected in the Content-Type response header, thereby satisfying the Servlet spec requirement that
-             * containers must communicate the character encoding used for the servlet response's writer to the client).
+             * If the response's character encoding has not been specified as
+             * described in <code>getCharacterEncoding</code> (i.e., the method
+             * just returns the default value <code>ISO-8859-1</code>),
+             * <code>getWriter</code> updates it to <code>ISO-8859-1</code>
+             * (with the effect that a subsequent call to getContentType() will
+             * include a charset=ISO-8859-1 component which will also be
+             * reflected in the Content-Type response header, thereby satisfying
+             * the Servlet spec requirement that containers must communicate the
+             * character encoding used for the servlet response's writer to the
+             * client).
              */
             setCharacterEncoding(getCharacterEncoding());
         }
@@ -508,12 +608,23 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Has the output of this response already been committed?
+     *
+     * @return <code>true</code> if the response has been committed
+     */
     @Override
     public boolean isCommitted() {
         return getCoyoteResponse().isCommitted();
     }
 
 
+    /**
+     * Clear any content written to the buffer.
+     *
+     * @exception IllegalStateException if this response has already
+     *  been committed
+     */
     @Override
     public void reset() {
         // Ignore any call from an included servlet
@@ -529,6 +640,12 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Reset the data buffer but not any status or header information.
+     *
+     * @exception IllegalStateException if the response has already
+     *  been committed
+     */
     @Override
     public void resetBuffer() {
         resetBuffer(false);
@@ -536,23 +653,26 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Reset the data buffer and the using Writer/Stream flags but not any status or header information.
+     * Reset the data buffer and the using Writer/Stream flags but not any
+     * status or header information.
      *
-     * @param resetWriterStreamFlags <code>true</code> if the internal <code>usingWriter</code>,
-     *                                   <code>usingOutputStream</code>, <code>isCharacterEncodingSet</code> flags
-     *                                   should also be reset
+     * @param resetWriterStreamFlags <code>true</code> if the internal
+     *        <code>usingWriter</code>, <code>usingOutputStream</code>,
+     *        <code>isCharacterEncodingSet</code> flags should also be reset
      *
-     * @exception IllegalStateException if the response has already been committed
+     * @exception IllegalStateException if the response has already
+     *  been committed
      */
     public void resetBuffer(boolean resetWriterStreamFlags) {
 
         if (isCommitted()) {
-            throw new IllegalStateException(sm.getString("coyoteResponse.resetBuffer.ise"));
+            throw new IllegalStateException
+                (sm.getString("coyoteResponse.resetBuffer.ise"));
         }
 
         outputBuffer.reset(resetWriterStreamFlags);
 
-        if (resetWriterStreamFlags) {
+        if(resetWriterStreamFlags) {
             usingOutputStream = false;
             usingWriter = false;
             isCharacterEncodingSet = false;
@@ -561,11 +681,20 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Set the buffer size to be used for this Response.
+     *
+     * @param size The new buffer size
+     *
+     * @exception IllegalStateException if this method is called after
+     *  output has been committed for this response
+     */
     @Override
     public void setBufferSize(int size) {
 
         if (isCommitted() || !outputBuffer.isNew()) {
-            throw new IllegalStateException(sm.getString("coyoteResponse.setBufferSize.ise"));
+            throw new IllegalStateException
+                (sm.getString("coyoteResponse.setBufferSize.ise"));
         }
 
         outputBuffer.setBufferSize(size);
@@ -573,6 +702,11 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Set the content length (in bytes) for this Response.
+     *
+     * @param length The new content length
+     */
     @Override
     public void setContentLength(int length) {
 
@@ -595,6 +729,11 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Set the content type for this Response.
+     *
+     * @param type The new content type
+     */
     @Override
     public void setContentType(String type) {
 
@@ -609,8 +748,6 @@ public class Response implements HttpServletResponse {
 
         if (type == null) {
             getCoyoteResponse().setContentType(null);
-            getCoyoteResponse().setCharsetHolder(CharsetHolder.EMPTY);
-            isCharacterEncodingSet = false;
             return;
         }
 
@@ -622,22 +759,13 @@ public class Response implements HttpServletResponse {
             return;
         }
 
+        getCoyoteResponse().setContentTypeNoCharset(m[0]);
 
-        if (m[1] == null) {
-            // No charset and we know value is valid as cache lookup was
-            // successful
-            // Pass-through user provided value in case user-agent is buggy and
-            // requires specific format
-            getCoyoteResponse().setContentTypeNoCharset(type);
-        } else {
-            // There is a charset so have to rebuild content-type without it
-            getCoyoteResponse().setContentTypeNoCharset(m[0]);
-
+        if (m[1] != null) {
             // Ignore charset if getWriter() has already been called
             if (!usingWriter) {
-                getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(m[1]));
                 try {
-                    getCoyoteResponse().getCharsetHolder().validate();
+                    getCoyoteResponse().setCharacterEncoding(m[1]);
                 } catch (UnsupportedEncodingException e) {
                     log.warn(sm.getString("coyoteResponse.encoding.invalid", m[1]), e);
                 }
@@ -648,8 +776,15 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Overrides the name of the character encoding used in the body
+     * of the request. This method must be called prior to reading
+     * request parameters or reading input using getReader().
+     *
+     * @param charset String containing the name of the character encoding.
+     */
     @Override
-    public void setCharacterEncoding(String encoding) {
+    public void setCharacterEncoding(String charset) {
 
         if (isCommitted()) {
             return;
@@ -666,40 +801,22 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(encoding));
         try {
-            getCoyoteResponse().getCharsetHolder().validate();
+            getCoyoteResponse().setCharacterEncoding(charset);
         } catch (UnsupportedEncodingException e) {
-            log.warn(sm.getString("coyoteResponse.encoding.invalid", encoding), e);
+            log.warn(sm.getString("coyoteResponse.encoding.invalid", charset), e);
             return;
         }
-        isCharacterEncodingSet = encoding != null;
+        isCharacterEncodingSet = true;
     }
 
 
-    @Override
-    public void setCharacterEncoding(Charset charset) {
-
-        if (isCommitted()) {
-            return;
-        }
-
-        // Ignore any call from an included servlet
-        if (included) {
-            return;
-        }
-
-        // Ignore any call made after the getWriter has been invoked
-        // The default should be used
-        if (usingWriter) {
-            return;
-        }
-
-        getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(charset));
-        isCharacterEncodingSet = charset != null;
-    }
-
-
+    /**
+     * Set the Locale that is appropriate for this response, including
+     * setting the appropriate character encoding.
+     *
+     * @param locale The new locale
+     */
     @Override
     public void setLocale(Locale locale) {
 
@@ -724,21 +841,16 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        if (locale == null) {
-            getCoyoteResponse().setCharsetHolder(CharsetHolder.EMPTY);
-        } else {
-            // In some error handling scenarios, the context is unknown
-            // (e.g. a 404 when a ROOT context is not present)
-            Context context = getContext();
-            if (context != null) {
-                String charset = context.getCharset(locale);
-                if (charset != null) {
-                    getCoyoteResponse().setCharsetHolder(CharsetHolder.getInstance(charset));
-                    try {
-                        getCoyoteResponse().getCharsetHolder().validate();
-                    } catch (UnsupportedEncodingException e) {
-                        log.warn(sm.getString("coyoteResponse.encoding.invalid", charset), e);
-                    }
+        // In some error handling scenarios, the context is unknown
+        // (e.g. a 404 when a ROOT context is not present)
+        Context context = getContext();
+        if (context != null) {
+            String charset = context.getCharset(locale);
+            if (charset != null) {
+                try {
+                    getCoyoteResponse().setCharacterEncoding(charset);
+                } catch (UnsupportedEncodingException e) {
+                    log.warn(sm.getString("coyoteResponse.encoding.invalid", charset), e);
                 }
             }
         }
@@ -779,7 +891,8 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * @return the error message that was set with <code>sendError()</code> for this Response.
+     * @return the error message that was set with <code>sendError()</code>
+     * for this Response.
      */
     public String getMessage() {
         return getCoyoteResponse().getMessage();
@@ -795,7 +908,8 @@ public class Response implements HttpServletResponse {
     // -------------------------------------------- HttpServletResponse Methods
 
     /**
-     * Add the specified Cookie to those that will be included with this Response.
+     * Add the specified Cookie to those that will be included with
+     * this Response.
      *
      * @param cookie Cookie to be added
      */
@@ -807,13 +921,19 @@ public class Response implements HttpServletResponse {
             return;
         }
 
+        cookies.add(cookie);
+
         String header = generateCookieString(cookie);
-        // if we reached here, no exception, cookie is valid
+        //if we reached here, no exception, cookie is valid
+        // the header name is Set-Cookie for both "old" and v.1 ( RFC2109 )
+        // RFC2965 is not supported by browsers and the Servlet spec
+        // asks for 2109.
         addHeader("Set-Cookie", header, getContext().getCookieProcessor().getCharset());
     }
 
     /**
-     * Special method for adding a session cookie as we should be overriding any previous.
+     * Special method for adding a session cookie as we should be overriding
+     * any previous.
      *
      * @param cookie The new session cookie to add the response
      */
@@ -847,14 +967,25 @@ public class Response implements HttpServletResponse {
     public String generateCookieString(final Cookie cookie) {
         // Web application code can receive a IllegalArgumentException
         // from the generateHeader() invocation
-        return getContext().getCookieProcessor().generateHeader(cookie, request.getRequest());
+        if (SecurityUtil.isPackageProtectionEnabled()) {
+            return AccessController.doPrivileged(
+                    new PrivilegedGenerateCookieString(getContext(), cookie, request.getRequest()));
+        } else {
+            return getContext().getCookieProcessor().generateHeader(cookie, request.getRequest());
+        }
     }
 
 
+    /**
+     * Add the specified date header to the specified value.
+     *
+     * @param name Name of the header to set
+     * @param value Date value to be set
+     */
     @Override
     public void addDateHeader(String name, long value) {
 
-        if (name == null || name.isEmpty()) {
+        if (name == null || name.length() == 0) {
             return;
         }
 
@@ -871,6 +1002,12 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Add the specified header to the specified value.
+     *
+     * @param name Name of the header to set
+     * @param value Value to be set
+     */
     @Override
     public void addHeader(String name, String value) {
         addHeader(name, value, null);
@@ -879,7 +1016,7 @@ public class Response implements HttpServletResponse {
 
     private void addHeader(String name, String value, Charset charset) {
 
-        if (name == null || name.isEmpty() || value == null) {
+        if (name == null || name.length() == 0 || value == null) {
             return;
         }
 
@@ -892,11 +1029,10 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        char cc = name.charAt(0);
-        if (cc == 'C' || cc == 'c') {
-            if (checkSpecialHeader(name, value)) {
-                return;
-            }
+        char cc=name.charAt(0);
+        if (cc=='C' || cc=='c') {
+            if (checkSpecialHeader(name, value))
+            return;
         }
 
         getCoyoteResponse().addHeader(name, value, charset);
@@ -904,10 +1040,12 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * An extended version of this exists in {@link org.apache.coyote.Response}. This check is required here to ensure
-     * that the usingWriter check in {@link #setContentType(String)} is applied since usingWriter is not visible to
-     * {@link org.apache.coyote.Response} Called from set/addHeader.
+     * An extended version of this exists in {@link org.apache.coyote.Response}.
+     * This check is required here to ensure that the usingWriter check in
+     * {@link #setContentType(String)} is applied since usingWriter is not
+     * visible to {@link org.apache.coyote.Response}
      *
+     * Called from set/addHeader.
      * @return <code>true</code> if the header is special, no need to set the header.
      */
     private boolean checkSpecialHeader(String name, String value) {
@@ -919,10 +1057,16 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Add the specified integer header to the specified value.
+     *
+     * @param name Name of the header to set
+     * @param value Integer value to be set
+     */
     @Override
     public void addIntHeader(String name, int value) {
 
-        if (name == null || name.isEmpty()) {
+        if (name == null || name.length() == 0) {
             return;
         }
 
@@ -940,17 +1084,23 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Has the specified header been set already in this response?
+     *
+     * @param name Name of the header to check
+     * @return <code>true</code> if the header has been set
+     */
     @Override
     public boolean containsHeader(String name) {
         // Need special handling for Content-Type and Content-Length due to
         // special handling of these in coyoteResponse
-        char cc = name.charAt(0);
-        if (cc == 'C' || cc == 'c') {
-            if (name.equalsIgnoreCase("Content-Type")) {
+        char cc=name.charAt(0);
+        if(cc=='C' || cc=='c') {
+            if(name.equalsIgnoreCase("Content-Type")) {
                 // Will return null if this has not been set
                 return (getCoyoteResponse().getContentType() != null);
             }
-            if (name.equalsIgnoreCase("Content-Length")) {
+            if(name.equalsIgnoreCase("Content-Length")) {
                 // -1 means not known and is not sent to client
                 return (getCoyoteResponse().getContentLengthLong() != -1);
             }
@@ -961,17 +1111,24 @@ public class Response implements HttpServletResponse {
 
 
     @Override
-    public void setTrailerFields(Supplier<Map<String,String>> supplier) {
+    public void setTrailerFields(Supplier<Map<String, String>> supplier) {
         getCoyoteResponse().setTrailerFields(supplier);
     }
 
 
     @Override
-    public Supplier<Map<String,String>> getTrailerFields() {
+    public Supplier<Map<String, String>> getTrailerFields() {
         return getCoyoteResponse().getTrailerFields();
     }
 
 
+    /**
+     * Encode the session identifier associated with this response
+     * into the specified redirect URL, if necessary.
+     *
+     * @param url URL to be encoded
+     * @return <code>true</code> if the URL was encoded
+     */
     @Override
     public String encodeRedirectURL(String url) {
         if (isEncodeable(toAbsolute(url))) {
@@ -982,6 +1139,30 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Encode the session identifier associated with this response
+     * into the specified redirect URL, if necessary.
+     *
+     * @param url URL to be encoded
+     * @return <code>true</code> if the URL was encoded
+     *
+     * @deprecated As of Version 2.1 of the Java Servlet API, use
+     *  <code>encodeRedirectURL()</code> instead.
+     */
+    @Override
+    @Deprecated
+    public String encodeRedirectUrl(String url) {
+        return encodeRedirectURL(url);
+    }
+
+
+    /**
+     * Encode the session identifier associated with this response
+     * into the specified URL, if necessary.
+     *
+     * @param url URL to be encoded
+     * @return <code>true</code> if the URL was encoded
+     */
     @Override
     public String encodeURL(String url) {
 
@@ -1009,50 +1190,52 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Send an acknowledgement of a request.
+     * Encode the session identifier associated with this response
+     * into the specified URL, if necessary.
      *
-     * @param continueResponseTiming Indicates when the request for the ACK originated so it can be compared with the
-     *                                   configured timing for ACK responses.
+     * @param url URL to be encoded
+     * @return <code>true</code> if the URL was encoded
+     *
+     * @deprecated As of Version 2.1 of the Java Servlet API, use
+     *  <code>encodeURL()</code> instead.
      */
-    public void sendAcknowledgement(ContinueResponseTiming continueResponseTiming) {
-
-        if (isCommitted()) {
-            return;
-        }
-
-        // Ignore any call from an included servlet
-        if (included) {
-            return;
-        }
-
-        getCoyoteResponse().action(ActionCode.ACK, continueResponseTiming);
-    }
-
-
     @Override
-    public void sendEarlyHints() {
-        if (isCommitted()) {
-            return;
-        }
-
-        // Ignore any call from an included servlet
-        if (included) {
-            return;
-        }
-
-        getCoyoteResponse().action(ActionCode.EARLY_HINTS, null);
+    @Deprecated
+    public String encodeUrl(String url) {
+        return encodeURL(url);
     }
 
 
     /**
-     * {@inheritDoc}
-     * <p>
-     * <i>Deprecated functionality</i>: calling <code>sendError</code> with a status code of 103 differs from the usual
-     * behavior. Sending 103 will trigger the container to send a "103 Early Hints" informational response including all
-     * current headers. The application can continue to use the request and response after calling sendError with a 103
-     * status code, including triggering a more typical response of any type.
-     * <p>
-     * Starting with Tomcat 12, applications should use {@link #sendEarlyHints}.
+     * Send an acknowledgement of a request.
+     *
+     * @exception IOException if an input/output error occurs
+     */
+    public void sendAcknowledgement()
+        throws IOException {
+
+        if (isCommitted()) {
+            return;
+        }
+
+        // Ignore any call from an included servlet
+        if (included) {
+            return;
+        }
+
+        getCoyoteResponse().action(ActionCode.ACK, null);
+    }
+
+
+    /**
+     * Send an error response with the specified status and a
+     * default message.
+     *
+     * @param status HTTP status code to send
+     *
+     * @exception IllegalStateException if this response has
+     *  already been committed
+     * @exception IOException if an input/output error occurs
      */
     @Override
     public void sendError(int status) throws IOException {
@@ -1061,20 +1244,21 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * {@inheritDoc}
-     * <p>
-     * <i>Deprecated functionality</i>: calling <code>sendError</code> with a status code of 103 differs from the usual
-     * behavior. Sending 103 will trigger the container to send a "103 Early Hints" informational response including all
-     * current headers. The application can continue to use the request and response after calling sendError with a 103
-     * status code, including triggering a more typical response of any type.
-     * <p>
-     * Starting with Tomcat 12, applications should use {@link #sendEarlyHints}.
+     * Send an error response with the specified status and message.
+     *
+     * @param status HTTP status code to send
+     * @param message Corresponding message to send
+     *
+     * @exception IllegalStateException if this response has
+     *  already been committed
+     * @exception IOException if an input/output error occurs
      */
     @Override
     public void sendError(int status, String message) throws IOException {
 
         if (isCommitted()) {
-            throw new IllegalStateException(sm.getString("coyoteResponse.sendError.ise"));
+            throw new IllegalStateException
+                (sm.getString("coyoteResponse.sendError.ise"));
         }
 
         // Ignore any call from an included servlet
@@ -1082,25 +1266,44 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        if (HttpServletResponse.SC_EARLY_HINTS == status) {
-            sendEarlyHints();
-        } else {
-            setError();
+        setError();
 
-            getCoyoteResponse().setStatus(status);
-            getCoyoteResponse().setMessage(message);
+        getCoyoteResponse().setStatus(status);
+        getCoyoteResponse().setMessage(message);
 
-            // Clear any data content that has been buffered
-            resetBuffer();
+        // Clear any data content that has been buffered
+        resetBuffer();
 
-            // Cause the response to be finished (from the application perspective)
-            setSuspended(true);
-        }
+        // Cause the response to be finished (from the application perspective)
+        setSuspended(true);
     }
 
 
+    /**
+     * Send a temporary redirect to the specified redirect location URL.
+     *
+     * @param location Location URL to redirect to
+     *
+     * @exception IllegalStateException if this response has
+     *  already been committed
+     * @exception IOException if an input/output error occurs
+     */
     @Override
-    public void sendRedirect(String location, int status, boolean clearBuffer) throws IOException {
+    public void sendRedirect(String location) throws IOException {
+        sendRedirect(location, SC_FOUND);
+    }
+
+
+    /**
+     * Internal method that allows a redirect to be sent with a status other
+     * than {@link HttpServletResponse#SC_FOUND} (302). No attempt is made to
+     * validate the status code.
+     *
+     * @param location Location URL to redirect to
+     * @param status HTTP status code that will be sent
+     * @throws IOException an IO exception occurred
+     */
+    public void sendRedirect(String location, int status) throws IOException {
         if (isCommitted()) {
             throw new IllegalStateException(sm.getString("coyoteResponse.sendRedirect.ise"));
         }
@@ -1111,29 +1314,24 @@ public class Response implements HttpServletResponse {
         }
 
         // Clear any data content that has been buffered
-        if (clearBuffer) {
-            resetBuffer(true);
-        }
+        resetBuffer(true);
 
         // Generate a temporary redirect to the specified location
         try {
-            Context context = getContext();
-            // If no ROOT context is defined, the context can be null.
-            // In this case, the default Tomcat values are assumed, but without
-            // reference to org.apache.catalina.STRICT_SERVLET_COMPLIANCE.
             String locationUri;
-            // Relative redirects require HTTP/1.1 or later
+            // Relative redirects require HTTP/1.1
             if (getRequest().getCoyoteRequest().getSupportsRelativeRedirects() &&
-                    (context == null || context.getUseRelativeRedirects())) {
+                    getContext().getUseRelativeRedirects()) {
                 locationUri = location;
             } else {
                 locationUri = toAbsolute(location);
             }
             setStatus(status);
             setHeader("Location", locationUri);
-            if (clearBuffer && context != null && context.getSendRedirectBody()) {
+            if (getContext().getSendRedirectBody()) {
                 PrintWriter writer = getWriter();
-                writer.print(sm.getString("coyoteResponse.sendRedirect.note", Escape.htmlElementContent(locationUri)));
+                writer.print(sm.getString("coyoteResponse.sendRedirect.note",
+                        Escape.htmlElementContent(locationUri)));
                 flushBuffer();
             }
         } catch (IllegalArgumentException e) {
@@ -1146,10 +1344,16 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Set the specified date header to the specified value.
+     *
+     * @param name Name of the header to set
+     * @param value Date value to be set
+     */
     @Override
     public void setDateHeader(String name, long value) {
 
-        if (name == null || name.isEmpty()) {
+        if (name == null || name.length() == 0) {
             return;
         }
 
@@ -1166,10 +1370,16 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Set the specified header to the specified value.
+     *
+     * @param name Name of the header to set
+     * @param value Value to be set
+     */
     @Override
     public void setHeader(String name, String value) {
 
-        if (name == null || name.isEmpty()) {
+        if (name == null || name.length() == 0 || value == null) {
             return;
         }
 
@@ -1182,8 +1392,8 @@ public class Response implements HttpServletResponse {
             return;
         }
 
-        char cc = name.charAt(0);
-        if (cc == 'C' || cc == 'c') {
+        char cc=name.charAt(0);
+        if (cc=='C' || cc=='c') {
             if (checkSpecialHeader(name, value)) {
                 return;
             }
@@ -1193,10 +1403,16 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Set the specified integer header to the specified value.
+     *
+     * @param name Name of the header to set
+     * @param value Integer value to be set
+     */
     @Override
     public void setIntHeader(String name, int value) {
 
-        if (name == null || name.isEmpty()) {
+        if (name == null || name.length() == 0) {
             return;
         }
 
@@ -1214,8 +1430,30 @@ public class Response implements HttpServletResponse {
     }
 
 
+    /**
+     * Set the HTTP status to be returned with this response.
+     *
+     * @param status The new HTTP status
+     */
     @Override
     public void setStatus(int status) {
+        setStatus(status, null);
+    }
+
+
+    /**
+     * Set the HTTP status and message to be returned with this response.
+     *
+     * @param status The new HTTP status
+     * @param message The associated text message
+     *
+     * @deprecated As of Version 2.1 of the Java Servlet API, this method
+     *  has been deprecated due to the ambiguous meaning of the message
+     *  parameter.
+     */
+    @Override
+    @Deprecated
+    public void setStatus(int status, String message) {
 
         if (isCommitted()) {
             return;
@@ -1227,22 +1465,25 @@ public class Response implements HttpServletResponse {
         }
 
         getCoyoteResponse().setStatus(status);
+        getCoyoteResponse().setMessage(message);
+
     }
 
 
     // ------------------------------------------------------ Protected Methods
 
     /**
-     * Return <code>true</code> if the specified URL should be encoded with a session identifier. This will be true if
-     * all of the following conditions are met:
+     * Return <code>true</code> if the specified URL should be encoded with
+     * a session identifier.  This will be true if all of the following
+     * conditions are met:
      * <ul>
      * <li>The request we are responding to asked for a valid session
      * <li>The requested session ID was not received via a cookie
-     * <li>The specified URL points back to somewhere within the web application that is responding to this request
+     * <li>The specified URL points back to somewhere within the web
+     *     application that is responding to this request
      * </ul>
      *
      * @param location Absolute URL to be validated
-     *
      * @return <code>true</code> if the URL should be encoded
      */
     protected boolean isEncodeable(final String location) {
@@ -1267,21 +1508,28 @@ public class Response implements HttpServletResponse {
         }
 
         // Is URL encoding permitted
-        if (!hreq.getServletContext().getEffectiveSessionTrackingModes().contains(SessionTrackingMode.URL)) {
+        if (!hreq.getServletContext().getEffectiveSessionTrackingModes().
+                contains(SessionTrackingMode.URL)) {
             return false;
         }
 
-        return doIsEncodeable(getContext(), hreq, session, location);
+        if (SecurityUtil.isPackageProtectionEnabled()) {
+            Boolean result =  AccessController.doPrivileged(
+                    new PrivilegedDoIsEncodable(getContext(), hreq, session, location));
+            return result.booleanValue();
+        } else {
+            return doIsEncodeable(getContext(), hreq, session, location);
+        }
     }
 
 
-    private static boolean doIsEncodeable(Context context, Request hreq, Session session, String location) {
+    private static boolean doIsEncodeable(Context context, Request hreq, Session session,
+                                   String location) {
         // Is this a valid absolute URL?
-        URL url;
+        URL url = null;
         try {
-            URI uri = new URI(location);
-            url = uri.toURL();
-        } catch (MalformedURLException | URISyntaxException | IllegalArgumentException e) {
+            url = new URL(location);
+        } catch (MalformedURLException e) {
             return false;
         }
 
@@ -1318,8 +1566,11 @@ public class Response implements HttpServletResponse {
             if (!file.startsWith(contextPath)) {
                 return false;
             }
-            String tok = ";" + SessionConfig.getSessionUriParamName(context) + "=" + session.getIdInternal();
-            return file.indexOf(tok, contextPath.length()) < 0;
+            String tok = ";" + SessionConfig.getSessionUriParamName(context) + "=" +
+                    session.getIdInternal();
+            if( file.indexOf(tok, contextPath.length()) >= 0 ) {
+                return false;
+            }
         }
 
         // This URL belongs to our web application, so it is encodeable
@@ -1329,20 +1580,20 @@ public class Response implements HttpServletResponse {
 
 
     /**
-     * Convert (if necessary) and return the absolute URL that represents the resource referenced by this possibly
-     * relative URL. If this URL is already absolute, return it unchanged.
+     * Convert (if necessary) and return the absolute URL that represents the
+     * resource referenced by this possibly relative URL.  If this URL is
+     * already absolute, return it unchanged.
      *
      * @param location URL to be (possibly) converted and then returned
-     *
      * @return the encoded URL
      *
-     * @exception IllegalArgumentException if a MalformedURLException is thrown when converting the relative URL to an
-     *                                         absolute one
+     * @exception IllegalArgumentException if a MalformedURLException is
+     *  thrown when converting the relative URL to an absolute one
      */
     protected String toAbsolute(String location) {
 
         if (location == null) {
-            return null;
+            return location;
         }
 
         boolean leadingSlash = location.startsWith("/");
@@ -1358,7 +1609,10 @@ public class Response implements HttpServletResponse {
                 redirectURLCC.append(location, 0, location.length());
                 return redirectURLCC.toString();
             } catch (IOException e) {
-                throw new IllegalArgumentException(location, e);
+                IllegalArgumentException iae =
+                    new IllegalArgumentException(location);
+                iae.initCause(e);
+                throw iae;
             }
 
         } else if (leadingSlash || !UriUtil.hasScheme(location)) {
@@ -1373,7 +1627,8 @@ public class Response implements HttpServletResponse {
                 redirectURLCC.append(scheme, 0, scheme.length());
                 redirectURLCC.append("://", 0, 3);
                 redirectURLCC.append(name, 0, name.length());
-                if ((scheme.equals("http") && port != 80) || (scheme.equals("https") && port != 443)) {
+                if ((scheme.equals("http") && port != 80)
+                    || (scheme.equals("https") && port != 443)) {
                     redirectURLCC.append(':');
                     String portS = port + "";
                     redirectURLCC.append(portS, 0, portS.length());
@@ -1381,7 +1636,20 @@ public class Response implements HttpServletResponse {
                 if (!leadingSlash) {
                     String relativePath = request.getDecodedRequestURI();
                     int pos = relativePath.lastIndexOf('/');
-                    CharChunk encodedURI = urlEncoder.encodeURL(relativePath, 0, pos);
+                    CharChunk encodedURI = null;
+                    if (SecurityUtil.isPackageProtectionEnabled() ){
+                        try{
+                            encodedURI = AccessController.doPrivileged(
+                                    new PrivilgedEncodeUrl(urlEncoder, relativePath, pos));
+                        } catch (PrivilegedActionException pae){
+                            IllegalArgumentException iae =
+                                new IllegalArgumentException(location);
+                            iae.initCause(pae.getException());
+                            throw iae;
+                        }
+                    } else {
+                        encodedURI = urlEncoder.encodeURL(relativePath, 0, pos);
+                    }
                     redirectURLCC.append(encodedURI);
                     encodedURI.recycle();
                     redirectURLCC.append('/');
@@ -1390,7 +1658,10 @@ public class Response implements HttpServletResponse {
 
                 normalize(redirectURLCC);
             } catch (IOException e) {
-                throw new IllegalArgumentException(location, e);
+                IllegalArgumentException iae =
+                    new IllegalArgumentException(location);
+                iae.initCause(e);
+                throw iae;
             }
 
             return redirectURLCC.toString();
@@ -1404,7 +1675,8 @@ public class Response implements HttpServletResponse {
     }
 
     /**
-     * Removes /./ and /../ sequences from absolute URLs. Code borrowed heavily from CoyoteAdapter.normalize()
+     * Removes /./ and /../ sequences from absolute URLs.
+     * Code borrowed heavily from CoyoteAdapter.normalize()
      *
      * @param cc the char chunk containing the chars to normalize
      */
@@ -1417,7 +1689,8 @@ public class Response implements HttpServletResponse {
         }
         char[] truncateCC = null;
         if (truncate > -1) {
-            truncateCC = Arrays.copyOfRange(cc.getBuffer(), cc.getStart() + truncate, cc.getEnd());
+            truncateCC = Arrays.copyOfRange(cc.getBuffer(),
+                    cc.getStart() + truncate, cc.getEnd());
             cc.setEnd(cc.getStart() + truncate);
         }
 
@@ -1432,6 +1705,7 @@ public class Response implements HttpServletResponse {
         char[] c = cc.getChars();
         int start = cc.getStart();
         int end = cc.getEnd();
+        int index = 0;
         int startIndex = 0;
 
         // Advance past the first three / characters (should place index just
@@ -1442,13 +1716,14 @@ public class Response implements HttpServletResponse {
         }
 
         // Remove /./
-        int index = startIndex;
+        index = startIndex;
         while (true) {
             index = cc.indexOf("/./", 0, 3, index);
             if (index < 0) {
                 break;
             }
-            copyChars(c, start + index, start + index + 2, end - start - index - 2);
+            copyChars(c, start + index, start + index + 2,
+                      end - start - index - 2);
             end = end - 2;
             cc.setEnd(end);
         }
@@ -1466,12 +1741,13 @@ public class Response implements HttpServletResponse {
                 throw new IllegalArgumentException();
             }
             int index2 = -1;
-            for (pos = start + index - 1; (pos >= 0) && (index2 < 0); pos--) {
+            for (pos = start + index - 1; (pos >= 0) && (index2 < 0); pos --) {
                 if (c[pos] == (byte) '/') {
                     index2 = pos;
                 }
             }
-            copyChars(c, start + index2, start + index + 3, end - start - index - 3);
+            copyChars(c, start + index2, start + index + 3,
+                      end - start - index - 3);
             end = end + index2 - index - 3;
             cc.setEnd(end);
             index = index2;
@@ -1496,7 +1772,6 @@ public class Response implements HttpServletResponse {
      * Determine if an absolute URL has a path component.
      *
      * @param uri the URL that will be checked
-     *
      * @return <code>true</code> if the URL has a path
      */
     private boolean hasPath(String uri) {
@@ -1505,19 +1780,22 @@ public class Response implements HttpServletResponse {
             return false;
         }
         pos = uri.indexOf('/', pos + 3);
-        return pos >= 0;
+        if (pos < 0) {
+            return false;
+        }
+        return true;
     }
 
     /**
-     * Return the specified URL with the specified session identifier suitably encoded.
+     * Return the specified URL with the specified session identifier
+     * suitably encoded.
      *
-     * @param url       URL to be encoded with the session id
+     * @param url URL to be encoded with the session id
      * @param sessionId Session id to be included in the encoded URL
-     *
      * @return the encoded URL
      */
     protected String toEncoded(String url, String sessionId) {
-        if (url == null || sessionId == null) {
+        if ((url == null) || (sessionId == null)) {
             return url;
         }
 
@@ -1535,14 +1813,75 @@ public class Response implements HttpServletResponse {
             path = path.substring(0, pound);
         }
         StringBuilder sb = new StringBuilder(path);
-        if (!sb.isEmpty()) { // jsessionid can't be first.
-            sb.append(';');
-            sb.append(SessionConfig.getSessionUriParamName(request.getContext()));
-            sb.append('=');
+        if( sb.length() > 0 ) { // jsessionid can't be first.
+            sb.append(";");
+            sb.append(SessionConfig.getSessionUriParamName(
+                    request.getContext()));
+            sb.append("=");
             sb.append(sessionId);
         }
         sb.append(anchor);
         sb.append(query);
         return sb.toString();
+    }
+
+
+    private static class PrivilegedGenerateCookieString implements PrivilegedAction<String> {
+
+        private final Context context;
+        private final Cookie cookie;
+        private final HttpServletRequest request;
+
+        public PrivilegedGenerateCookieString(Context context, Cookie cookie, HttpServletRequest request) {
+            this.context = context;
+            this.cookie = cookie;
+            this.request = request;
+        }
+
+        @Override
+        public String run(){
+            return context.getCookieProcessor().generateHeader(cookie, request);
+        }
+    }
+
+
+    private static class PrivilegedDoIsEncodable implements PrivilegedAction<Boolean> {
+
+        private final Context context;
+        private final Request hreq;
+        private final Session session;
+        private final String location;
+
+        public PrivilegedDoIsEncodable(Context context, Request hreq, Session session,
+                String location) {
+            this.context = context;
+            this.hreq = hreq;
+            this.session = session;
+            this.location = location;
+        }
+
+        @Override
+        public Boolean run(){
+            return Boolean.valueOf(doIsEncodeable(context, hreq, session, location));
+        }
+    }
+
+
+    private static class PrivilgedEncodeUrl implements PrivilegedExceptionAction<CharChunk> {
+
+        private final UEncoder urlEncoder;
+        private final String relativePath;
+        private final int end;
+
+        public PrivilgedEncodeUrl(UEncoder urlEncoder, String relativePath, int end) {
+            this.urlEncoder = urlEncoder;
+            this.relativePath = relativePath;
+            this.end = end;
+        }
+
+        @Override
+        public CharChunk run() throws IOException{
+            return urlEncoder.encodeURL(relativePath, 0, end);
+        }
     }
 }
