@@ -38,8 +38,11 @@ public class NestedCredentialHandler implements CredentialHandler {
 
 
     /**
-     * The input credentials will be passed to the first nested {@link CredentialHandler}. If no nested
-     * {@link CredentialHandler} are configured then <code>null</code> will be returned. {@inheritDoc}
+     * The input credentials will be passed to the first nested
+     * {@link CredentialHandler}. If no nested {@link CredentialHandler} are
+     * configured then <code>null</code> will be returned.
+     *
+     * {@inheritDoc}
      */
     @Override
     public String mutate(String inputCredentials) {
@@ -47,7 +50,7 @@ public class NestedCredentialHandler implements CredentialHandler {
             return null;
         }
 
-        return credentialHandlers.getFirst().mutate(inputCredentials);
+        return credentialHandlers.get(0).mutate(inputCredentials);
     }
 
 
