@@ -24,9 +24,7 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
 
-import org.apache.tomcat.util.ExceptionUtils;
 import org.apache.tomcat.util.res.StringManager;
-
 /**
  * Represents a parsed expression.
  *
@@ -35,13 +33,13 @@ import org.apache.tomcat.util.res.StringManager;
 public class ExpressionParseTree {
     private static final StringManager sm = StringManager.getManager(ExpressionParseTree.class);
     /**
-     * Contains the current set of completed nodes. This is a workspace for the parser. Needs to be LinkedList since it
-     * can contain {@code null}s.
+     * Contains the current set of completed nodes. This is a workspace for the
+     * parser.
      */
     private final LinkedList<Node> nodeStack = new LinkedList<>();
     /**
-     * Contains operator nodes that don't yet have values. This is a workspace for the parser. Needs to be LinkedList
-     * since it can contain {@code null}s.
+     * Contains operator nodes that don't yet have values. This is a workspace
+     * for the parser.
      */
     private final LinkedList<OppNode> oppStack = new LinkedList<>();
     /**
@@ -56,92 +54,77 @@ public class ExpressionParseTree {
 
     /**
      * Creates a new parse tree for the specified expression.
-     *
-     * @param expr        The expression string
-     * @param ssiMediator Used to evaluate the expressions
-     *
+     * @param expr The expression string
+     * @param ssiMediator Used to evaluated the expressions
      * @throws ParseException a parsing error occurred
      */
-    public ExpressionParseTree(String expr, SSIMediator ssiMediator) throws ParseException {
+    public ExpressionParseTree(String expr, SSIMediator ssiMediator)
+            throws ParseException {
         this.ssiMediator = ssiMediator;
         parseExpression(expr);
     }
 
 
     /**
-     * Evaluates the tree and returns true or false. The specified SSIMediator is used to resolve variable references.
-     *
+     * Evaluates the tree and returns true or false. The specified SSIMediator
+     * is used to resolve variable references.
      * @return the evaluation result
-     *
-     * @throws SSIStopProcessingException If an error occurs evaluating the tree
      */
-    public boolean evaluateTree() throws SSIStopProcessingException {
-        try {
-            return root.evaluate();
-        } catch (Throwable t) {
-            ExceptionUtils.handleThrowable(t);
-            throw new SSIStopProcessingException(t);
-        }
+    public boolean evaluateTree() {
+        return root.evaluate();
     }
 
 
     /**
-     * Pushes a new operator onto the opp stack, resolving existing opps as needed.
-     *
+     * Pushes a new operator onto the opp stack, resolving existing opps as
+     * needed.
      * @param node The operator node
      */
     private void pushOpp(OppNode node) {
         // If node is null then it's just a group marker
         if (node == null) {
-            oppStack.addFirst(null);
+            oppStack.add(0, node);
             return;
         }
         while (true) {
-            if (oppStack.isEmpty()) {
-                break;
-            }
-            OppNode top = oppStack.getFirst();
+            if (oppStack.size() == 0) break;
+            OppNode top = oppStack.get(0);
             // If the top is a spacer then don't pop
             // anything
-            if (top == null) {
-                break;
-            }
+            if (top == null) break;
             // If the top node has a lower precedence then
             // let it stay
-            if (top.getPrecedence() < node.getPrecedence()) {
-                break;
-            }
+            if (top.getPrecedence() < node.getPrecedence()) break;
             // Remove the top node
-            oppStack.removeFirst();
+            oppStack.remove(0);
             // Let it fill its branches
             top.popValues(nodeStack);
             // Stick it on the resolved node stack
-            nodeStack.addFirst(top);
+            nodeStack.add(0, top);
         }
         // Add the new node to the opp stack
-        oppStack.addFirst(node);
+        oppStack.add(0, node);
     }
 
 
     /**
-     * Resolves all pending opp nodes on the stack until the next group marker is reached.
+     * Resolves all pending opp nodes on the stack until the next group marker
+     * is reached.
      */
     private void resolveGroup() {
-        OppNode top;
-        while ((top = oppStack.removeFirst()) != null) {
+        OppNode top = null;
+        while ((top = oppStack.remove(0)) != null) {
             // Let it fill its branches
             top.popValues(nodeStack);
             // Stick it on the resolved node stack
-            nodeStack.addFirst(top);
+            nodeStack.add(0, top);
         }
     }
 
 
     /**
      * Parses the specified expression into a tree of parse nodes.
-     *
      * @param expr The expression to parse
-     *
      * @throws ParseException a parsing error occurred
      */
     private void parseExpression(String expr) throws ParseException {
@@ -152,92 +135,90 @@ public class ExpressionParseTree {
         ExpressionTokenizer et = new ExpressionTokenizer(expr);
         while (et.hasMoreTokens()) {
             int token = et.nextToken();
-            if (token != ExpressionTokenizer.TOKEN_STRING) {
+            if (token != ExpressionTokenizer.TOKEN_STRING)
                 currStringNode = null;
-            }
             switch (token) {
-                case ExpressionTokenizer.TOKEN_STRING:
+                case ExpressionTokenizer.TOKEN_STRING :
                     if (currStringNode == null) {
                         currStringNode = new StringNode(et.getTokenValue());
-                        nodeStack.addFirst(currStringNode);
+                        nodeStack.add(0, currStringNode);
                     } else {
                         // Add to the existing
-                        currStringNode.value.append(' ');
+                        currStringNode.value.append(" ");
                         currStringNode.value.append(et.getTokenValue());
                     }
                     break;
-                case ExpressionTokenizer.TOKEN_AND:
+                case ExpressionTokenizer.TOKEN_AND :
                     pushOpp(new AndNode());
                     break;
-                case ExpressionTokenizer.TOKEN_OR:
+                case ExpressionTokenizer.TOKEN_OR :
                     pushOpp(new OrNode());
                     break;
-                case ExpressionTokenizer.TOKEN_NOT:
+                case ExpressionTokenizer.TOKEN_NOT :
                     pushOpp(new NotNode());
                     break;
-                case ExpressionTokenizer.TOKEN_EQ:
+                case ExpressionTokenizer.TOKEN_EQ :
                     pushOpp(new EqualNode());
                     break;
-                case ExpressionTokenizer.TOKEN_NOT_EQ:
+                case ExpressionTokenizer.TOKEN_NOT_EQ :
                     pushOpp(new NotNode());
-                    // Sneak the regular node in. They will NOT
+                    // Sneak the regular node in. The NOT will
                     // be resolved when the next opp comes along.
-                    oppStack.addFirst(new EqualNode());
+                    oppStack.add(0, new EqualNode());
                     break;
-                case ExpressionTokenizer.TOKEN_RBRACE:
+                case ExpressionTokenizer.TOKEN_RBRACE :
                     // Closeout the current group
                     resolveGroup();
                     break;
-                case ExpressionTokenizer.TOKEN_LBRACE:
+                case ExpressionTokenizer.TOKEN_LBRACE :
                     // Push a group marker
                     pushOpp(null);
                     break;
-                case ExpressionTokenizer.TOKEN_GE:
+                case ExpressionTokenizer.TOKEN_GE :
                     pushOpp(new NotNode());
                     // Similar strategy to NOT_EQ above, except this
                     // is NOT less than
-                    oppStack.addFirst(new LessThanNode());
+                    oppStack.add(0, new LessThanNode());
                     break;
-                case ExpressionTokenizer.TOKEN_LE:
+                case ExpressionTokenizer.TOKEN_LE :
                     pushOpp(new NotNode());
                     // Similar strategy to NOT_EQ above, except this
                     // is NOT greater than
-                    oppStack.addFirst(new GreaterThanNode());
+                    oppStack.add(0, new GreaterThanNode());
                     break;
-                case ExpressionTokenizer.TOKEN_GT:
+                case ExpressionTokenizer.TOKEN_GT :
                     pushOpp(new GreaterThanNode());
                     break;
-                case ExpressionTokenizer.TOKEN_LT:
+                case ExpressionTokenizer.TOKEN_LT :
                     pushOpp(new LessThanNode());
                     break;
-                case ExpressionTokenizer.TOKEN_END:
+                case ExpressionTokenizer.TOKEN_END :
                     break;
             }
         }
         // Finish off the rest of the opps
         resolveGroup();
-        if (nodeStack.isEmpty()) {
+        if (nodeStack.size() == 0) {
             throw new ParseException(sm.getString("expressionParseTree.noNodes"), et.getIndex());
         }
         if (nodeStack.size() > 1) {
             throw new ParseException(sm.getString("expressionParseTree.extraNodes"), et.getIndex());
         }
-        if (!oppStack.isEmpty()) {
+        if (oppStack.size() != 0) {
             throw new ParseException(sm.getString("expressionParseTree.unusedOpCodes"), et.getIndex());
         }
-        root = nodeStack.getFirst();
+        root = nodeStack.get(0);
     }
 
     /**
      * A node in the expression parse tree.
      */
-    private abstract static class Node {
+    private abstract class Node {
         /**
          * @return {@code true} if the node evaluates to true.
          */
         public abstract boolean evaluate();
     }
-
     /**
      * A node the represents a String value
      */
@@ -246,7 +227,7 @@ public class ExpressionParseTree {
         String resolved = null;
 
 
-        StringNode(String value) {
+        public StringNode(String value) {
             this.value = new StringBuilder(value);
         }
 
@@ -257,9 +238,8 @@ public class ExpressionParseTree {
          * @return the value string
          */
         public String getValue() {
-            if (resolved == null) {
+            if (resolved == null)
                 resolved = ssiMediator.substituteVariables(value.toString());
-            }
             return resolved;
         }
 
@@ -269,7 +249,7 @@ public class ExpressionParseTree {
          */
         @Override
         public boolean evaluate() {
-            return !(getValue().isEmpty());
+            return !(getValue().length() == 0);
         }
 
 
@@ -286,7 +266,7 @@ public class ExpressionParseTree {
     /**
      * A node implementation that represents an operation.
      */
-    private abstract static class OppNode extends Node {
+    private abstract class OppNode extends Node {
         /**
          * The left branch.
          */
@@ -298,23 +278,24 @@ public class ExpressionParseTree {
 
 
         /**
-         * @return a precedence level suitable for comparison to other OppNode preference levels.
+         * @return a precedence level suitable for comparison to other OppNode
+         * preference levels.
          */
         public abstract int getPrecedence();
 
 
         /**
-         * Lets the node pop its own branch nodes off the front of the specified list. The default pulls two.
+         * Lets the node pop its own branch nodes off the front of the
+         * specified list. The default pulls two.
          *
          * @param values The list from which to pop the values
          */
         public void popValues(List<Node> values) {
-            right = values.removeFirst();
-            left = values.removeFirst();
+            right = values.remove(0);
+            left = values.remove(0);
         }
     }
-
-    private static final class NotNode extends OppNode {
+    private final class NotNode extends OppNode {
         @Override
         public boolean evaluate() {
             return !left.evaluate();
@@ -332,7 +313,7 @@ public class ExpressionParseTree {
          */
         @Override
         public void popValues(List<Node> values) {
-            left = values.removeFirst();
+            left = values.remove(0);
         }
 
 
@@ -341,13 +322,11 @@ public class ExpressionParseTree {
             return left + " NOT";
         }
     }
-
-    private static final class AndNode extends OppNode {
+    private final class AndNode extends OppNode {
         @Override
         public boolean evaluate() {
-            if (!left.evaluate()) {
+            if (!left.evaluate()) // Short circuit
                 return false;
-            }
             return right.evaluate();
         }
 
@@ -363,13 +342,11 @@ public class ExpressionParseTree {
             return left + " " + right + " AND";
         }
     }
-
-    private static final class OrNode extends OppNode {
+    private final class OrNode extends OppNode {
         @Override
         public boolean evaluate() {
-            if (left.evaluate()) {
+            if (left.evaluate()) // Short circuit
                 return true;
-            }
             return right.evaluate();
         }
 
@@ -385,14 +362,14 @@ public class ExpressionParseTree {
             return left + " " + right + " OR";
         }
     }
-
     private abstract class CompareNode extends OppNode {
         protected int compareBranches() {
-            String val1 = ((StringNode) left).getValue();
-            String val2 = ((StringNode) right).getValue();
+            String val1 = ((StringNode)left).getValue();
+            String val2 = ((StringNode)right).getValue();
 
             int val2Len = val2.length();
-            if (val2Len > 1 && val2.charAt(0) == '/' && val2.charAt(val2Len - 1) == '/') {
+            if (val2Len > 1 && val2.charAt(0) == '/' &&
+                    val2.charAt(val2Len - 1) == '/') {
                 // Treat as a regular expression
                 String expr = val2.substring(1, val2Len - 1);
                 ssiMediator.clearMatchGroups();
@@ -415,7 +392,6 @@ public class ExpressionParseTree {
             return val1.compareTo(val2);
         }
     }
-
     private final class EqualNode extends CompareNode {
         @Override
         public boolean evaluate() {
@@ -434,7 +410,6 @@ public class ExpressionParseTree {
             return left + " " + right + " EQ";
         }
     }
-
     private final class GreaterThanNode extends CompareNode {
         @Override
         public boolean evaluate() {
@@ -453,7 +428,6 @@ public class ExpressionParseTree {
             return left + " " + right + " GT";
         }
     }
-
     private final class LessThanNode extends CompareNode {
         @Override
         public boolean evaluate() {
