@@ -21,25 +21,27 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import org.apache.catalina.Globals;
+import org.apache.catalina.security.SecurityClassLoad;
 import org.apache.catalina.startup.ClassLoaderFactory.Repository;
 import org.apache.catalina.startup.ClassLoaderFactory.RepositoryType;
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
 
 /**
- * Bootstrap loader for Catalina. This application constructs a class loader for use in loading the Catalina internal
- * classes (by accumulating all of the JAR files found in the "server" directory under "catalina.home"), and starts the
- * regular execution of the container. The purpose of this roundabout approach is to keep the Catalina internal classes
- * (and any other classes they depend on, such as an XML parser) out of the system class path and therefore not visible
- * to application level classes.
+ * Bootstrap loader for Catalina.  This application constructs a class loader
+ * for use in loading the Catalina internal classes (by accumulating all of the
+ * JAR files found in the "server" directory under "catalina.home"), and
+ * starts the regular execution of the container.  The purpose of this
+ * roundabout approach is to keep the Catalina internal classes (and any
+ * other classes they depend on, such as an XML parser) out of the system
+ * class path and therefore not visible to application level classes.
  *
  * @author Craig R. McClanahan
  * @author Remy Maucherat
@@ -64,7 +66,7 @@ public final class Bootstrap {
         String userDir = System.getProperty("user.dir");
 
         // Home first
-        String home = System.getProperty(Constants.CATALINA_HOME_PROP);
+        String home = System.getProperty(Globals.CATALINA_HOME_PROP);
         File homeFile = null;
 
         if (home != null) {
@@ -102,10 +104,11 @@ public final class Bootstrap {
         }
 
         catalinaHomeFile = homeFile;
-        System.setProperty(Constants.CATALINA_HOME_PROP, catalinaHomeFile.getPath());
+        System.setProperty(
+                Globals.CATALINA_HOME_PROP, catalinaHomeFile.getPath());
 
         // Then base
-        String base = System.getProperty(Constants.CATALINA_BASE_PROP);
+        String base = System.getProperty(Globals.CATALINA_BASE_PROP);
         if (base == null) {
             catalinaBaseFile = catalinaHomeFile;
         } else {
@@ -117,7 +120,8 @@ public final class Bootstrap {
             }
             catalinaBaseFile = baseFile;
         }
-        System.setProperty(Constants.CATALINA_BASE_PROP, catalinaBaseFile.getPath());
+        System.setProperty(
+                Globals.CATALINA_BASE_PROP, catalinaBaseFile.getPath());
     }
 
     // -------------------------------------------------------------- Variables
@@ -153,12 +157,12 @@ public final class Bootstrap {
     }
 
 
-    private ClassLoader createClassLoader(String name, ClassLoader parent) throws Exception {
+    private ClassLoader createClassLoader(String name, ClassLoader parent)
+        throws Exception {
 
         String value = CatalinaProperties.getProperty(name + ".loader");
-        if ((value == null) || (value.isEmpty())) {
+        if ((value == null) || (value.equals("")))
             return parent;
-        }
 
         value = replace(value);
 
@@ -169,18 +173,18 @@ public final class Bootstrap {
         for (String repository : repositoryPaths) {
             // Check for a JAR URL repository
             try {
-                URI uri = new URI(repository);
                 @SuppressWarnings("unused")
-                URL url = uri.toURL();
+                URL url = new URL(repository);
                 repositories.add(new Repository(repository, RepositoryType.URL));
                 continue;
-            } catch (IllegalArgumentException | MalformedURLException | URISyntaxException e) {
+            } catch (MalformedURLException e) {
                 // Ignore
             }
 
             // Local repository
             if (repository.endsWith("*.jar")) {
-                repository = repository.substring(0, repository.length() - "*.jar".length());
+                repository = repository.substring
+                    (0, repository.length() - "*.jar".length());
                 repositories.add(new Repository(repository, RepositoryType.GLOB));
             } else if (repository.endsWith(".jar")) {
                 repositories.add(new Repository(repository, RepositoryType.JAR));
@@ -197,10 +201,9 @@ public final class Bootstrap {
      * System property replacement in the given string.
      *
      * @param str The original string
-     *
      * @return the modified string
      */
-    private String replace(String str) {
+    protected String replace(String str) {
         // Implementation is copied from ClassLoaderLogManager.replace(),
         // but added special processing for catalina.home and catalina.base.
         String result = str;
@@ -217,11 +220,11 @@ public final class Bootstrap {
                 }
                 String propName = str.substring(pos_start + 2, pos_end);
                 String replacement;
-                if (propName.isEmpty()) {
+                if (propName.length() == 0) {
                     replacement = null;
-                } else if (Constants.CATALINA_HOME_PROP.equals(propName)) {
+                } else if (Globals.CATALINA_HOME_PROP.equals(propName)) {
                     replacement = getCatalinaHome();
-                } else if (Constants.CATALINA_BASE_PROP.equals(propName)) {
+                } else if (Globals.CATALINA_BASE_PROP.equals(propName)) {
                     replacement = getCatalinaBase();
                 } else {
                     replacement = System.getProperty(propName);
@@ -242,7 +245,6 @@ public final class Bootstrap {
 
     /**
      * Initialize daemon.
-     *
      * @throws Exception Fatal initialization error
      */
     public void init() throws Exception {
@@ -251,23 +253,24 @@ public final class Bootstrap {
 
         Thread.currentThread().setContextClassLoader(catalinaLoader);
 
+        SecurityClassLoad.securityClassLoad(catalinaLoader);
+
         // Load our startup class and call its process() method
-        if (log.isTraceEnabled()) {
-            log.trace("Loading startup class");
-        }
+        if (log.isDebugEnabled())
+            log.debug("Loading startup class");
         Class<?> startupClass = catalinaLoader.loadClass("org.apache.catalina.startup.Catalina");
         Object startupInstance = startupClass.getConstructor().newInstance();
 
         // Set the shared extensions class loader
-        if (log.isTraceEnabled()) {
-            log.trace("Setting startup class properties");
-        }
+        if (log.isDebugEnabled())
+            log.debug("Setting startup class properties");
         String methodName = "setParentClassLoader";
-        Class<?>[] paramTypes = new Class[1];
+        Class<?> paramTypes[] = new Class[1];
         paramTypes[0] = Class.forName("java.lang.ClassLoader");
-        Object[] paramValues = new Object[1];
+        Object paramValues[] = new Object[1];
         paramValues[0] = sharedLoader;
-        Method method = startupInstance.getClass().getMethod(methodName, paramTypes);
+        Method method =
+            startupInstance.getClass().getMethod(methodName, paramTypes);
         method.invoke(startupInstance, paramValues);
 
         catalinaDaemon = startupInstance;
@@ -281,9 +284,9 @@ public final class Bootstrap {
 
         // Call the load() method
         String methodName = "load";
-        Object[] param;
-        Class<?>[] paramTypes;
-        if (arguments == null || arguments.length == 0) {
+        Object param[];
+        Class<?> paramTypes[];
+        if (arguments==null || arguments.length==0) {
             paramTypes = null;
             param = null;
         } else {
@@ -292,9 +295,10 @@ public final class Bootstrap {
             param = new Object[1];
             param[0] = arguments;
         }
-        Method method = catalinaDaemon.getClass().getMethod(methodName, paramTypes);
-        if (log.isTraceEnabled()) {
-            log.trace("Calling startup class " + method);
+        Method method =
+            catalinaDaemon.getClass().getMethod(methodName, paramTypes);
+        if (log.isDebugEnabled()) {
+            log.debug("Calling startup class " + method);
         }
         method.invoke(catalinaDaemon, param);
     }
@@ -316,9 +320,7 @@ public final class Bootstrap {
 
     /**
      * Load the Catalina daemon.
-     *
      * @param arguments Initialization arguments
-     *
      * @throws Exception Fatal initialization error
      */
     public void init(String[] arguments) throws Exception {
@@ -330,7 +332,6 @@ public final class Bootstrap {
 
     /**
      * Start the Catalina daemon.
-     *
      * @throws Exception Fatal start error
      */
     public void start() throws Exception {
@@ -338,45 +339,42 @@ public final class Bootstrap {
             init();
         }
 
-        Method method = catalinaDaemon.getClass().getMethod("start", (Class<?>[]) null);
-        method.invoke(catalinaDaemon, (Object[]) null);
+        Method method = catalinaDaemon.getClass().getMethod("start", (Class [])null);
+        method.invoke(catalinaDaemon, (Object [])null);
     }
 
 
     /**
      * Stop the Catalina Daemon.
-     *
      * @throws Exception Fatal stop error
      */
     public void stop() throws Exception {
-        Method method = catalinaDaemon.getClass().getMethod("stop", (Class<?>[]) null);
-        method.invoke(catalinaDaemon, (Object[]) null);
+        Method method = catalinaDaemon.getClass().getMethod("stop", (Class []) null);
+        method.invoke(catalinaDaemon, (Object []) null);
     }
 
 
     /**
      * Stop the standalone server.
-     *
      * @throws Exception Fatal stop error
      */
     public void stopServer() throws Exception {
 
-        Method method = catalinaDaemon.getClass().getMethod("stopServer", (Class<?>[]) null);
-        method.invoke(catalinaDaemon, (Object[]) null);
+        Method method =
+            catalinaDaemon.getClass().getMethod("stopServer", (Class []) null);
+        method.invoke(catalinaDaemon, (Object []) null);
     }
 
 
-    /**
+   /**
      * Stop the standalone server.
-     *
      * @param arguments Command line arguments
-     *
      * @throws Exception Fatal stop error
      */
     public void stopServer(String[] arguments) throws Exception {
 
-        Object[] param;
-        Class<?>[] paramTypes;
+        Object param[];
+        Class<?> paramTypes[];
         if (arguments == null || arguments.length == 0) {
             paramTypes = null;
             param = null;
@@ -386,33 +384,35 @@ public final class Bootstrap {
             param = new Object[1];
             param[0] = arguments;
         }
-        Method method = catalinaDaemon.getClass().getMethod("stopServer", paramTypes);
+        Method method =
+            catalinaDaemon.getClass().getMethod("stopServer", paramTypes);
         method.invoke(catalinaDaemon, param);
     }
 
 
     /**
      * Set flag.
-     *
      * @param await <code>true</code> if the daemon should block
-     *
      * @throws Exception Reflection error
      */
-    public void setAwait(boolean await) throws Exception {
+    public void setAwait(boolean await)
+        throws Exception {
 
-        Class<?>[] paramTypes = new Class[1];
+        Class<?> paramTypes[] = new Class[1];
         paramTypes[0] = Boolean.TYPE;
-        Object[] paramValues = new Object[1];
+        Object paramValues[] = new Object[1];
         paramValues[0] = Boolean.valueOf(await);
-        Method method = catalinaDaemon.getClass().getMethod("setAwait", paramTypes);
+        Method method =
+            catalinaDaemon.getClass().getMethod("setAwait", paramTypes);
         method.invoke(catalinaDaemon, paramValues);
     }
 
     public boolean getAwait() throws Exception {
-        Class<?>[] paramTypes = new Class[0];
-        Object[] paramValues = new Object[0];
-        Method method = catalinaDaemon.getClass().getMethod("getAwait", paramTypes);
-        Boolean b = (Boolean) method.invoke(catalinaDaemon, paramValues);
+        Class<?> paramTypes[] = new Class[0];
+        Object paramValues[] = new Object[0];
+        Method method =
+            catalinaDaemon.getClass().getMethod("getAwait", paramTypes);
+        Boolean b=(Boolean)method.invoke(catalinaDaemon, paramValues);
         return b.booleanValue();
     }
 
@@ -421,15 +421,19 @@ public final class Bootstrap {
      * Destroy the Catalina Daemon.
      */
     public void destroy() {
+
+        // FIXME
+
     }
 
 
     /**
-     * Main method and entry point when starting Tomcat via the provided scripts.
+     * Main method and entry point when starting Tomcat via the provided
+     * scripts.
      *
      * @param args Command line arguments to be processed
      */
-    public static void main(String[] args) {
+    public static void main(String args[]) {
 
         synchronized (daemonLock) {
             if (daemon == null) {
@@ -439,7 +443,7 @@ public final class Bootstrap {
                     bootstrap.init();
                 } catch (Throwable t) {
                     handleThrowable(t);
-                    log.error("Init exception", t);
+                    t.printStackTrace();
                     return;
                 }
                 daemon = bootstrap;
@@ -457,55 +461,47 @@ public final class Bootstrap {
                 command = args[args.length - 1];
             }
 
-            switch (command) {
-                case "startd":
-                    args[args.length - 1] = "start";
-                    daemon.load(args);
-                    daemon.start();
-                    break;
-                case "stopd":
-                    args[args.length - 1] = "stop";
-                    daemon.stop();
-                    break;
-                case "start":
-                    daemon.setAwait(true);
-                    daemon.load(args);
-                    daemon.start();
-                    if (null == daemon.getServer()) {
-                        System.exit(1);
-                    }
-                    break;
-                case "stop":
-                    daemon.stopServer(args);
-                    break;
-                case "configtest":
-                    daemon.load(args);
-                    if (null == daemon.getServer()) {
-                        System.exit(1);
-                    }
-                    System.exit(0);
-                    break;
-                default:
-                    log.warn("Bootstrap: command \"" + command + "\" does not exist.");
-                    break;
+            if (command.equals("startd")) {
+                args[args.length - 1] = "start";
+                daemon.load(args);
+                daemon.start();
+            } else if (command.equals("stopd")) {
+                args[args.length - 1] = "stop";
+                daemon.stop();
+            } else if (command.equals("start")) {
+                daemon.setAwait(true);
+                daemon.load(args);
+                daemon.start();
+                if (null == daemon.getServer()) {
+                    System.exit(1);
+                }
+            } else if (command.equals("stop")) {
+                daemon.stopServer(args);
+            } else if (command.equals("configtest")) {
+                daemon.load(args);
+                if (null == daemon.getServer()) {
+                    System.exit(1);
+                }
+                System.exit(0);
+            } else {
+                log.warn("Bootstrap: command \"" + command + "\" does not exist.");
             }
         } catch (Throwable t) {
             // Unwrap the Exception for clearer error reporting
-            Throwable throwable = t;
-            if (throwable instanceof InvocationTargetException && throwable.getCause() != null) {
-                throwable = throwable.getCause();
+            if (t instanceof InvocationTargetException &&
+                    t.getCause() != null) {
+                t = t.getCause();
             }
-            handleThrowable(throwable);
-            log.error("Error running command", throwable);
+            handleThrowable(t);
+            t.printStackTrace();
             System.exit(1);
         }
     }
 
 
     /**
-     * Obtain the name of configured home (binary) directory. Note that home and base may be the same (and are by
-     * default).
-     *
+     * Obtain the name of configured home (binary) directory. Note that home and
+     * base may be the same (and are by default).
      * @return the catalina home
      */
     public static String getCatalinaHome() {
@@ -514,9 +510,9 @@ public final class Bootstrap {
 
 
     /**
-     * Obtain the name of the configured base (instance) directory. Note that home and base may be the same (and are by
-     * default). If this is not set the value returned by {@link #getCatalinaHome()} will be used.
-     *
+     * Obtain the name of the configured base (instance) directory. Note that
+     * home and base may be the same (and are by default). If this is not set
+     * the value returned by {@link #getCatalinaHome()} will be used.
      * @return the catalina base
      */
     public static String getCatalinaBase() {
@@ -525,8 +521,8 @@ public final class Bootstrap {
 
 
     /**
-     * Obtain the configured home (binary) directory. Note that home and base may be the same (and are by default).
-     *
+     * Obtain the configured home (binary) directory. Note that home and
+     * base may be the same (and are by default).
      * @return the catalina home as a file
      */
     public static File getCatalinaHomeFile() {
@@ -535,9 +531,9 @@ public final class Bootstrap {
 
 
     /**
-     * Obtain the configured base (instance) directory. Note that home and base may be the same (and are by default). If
-     * this is not set the value returned by {@link #getCatalinaHomeFile()} will be used.
-     *
+     * Obtain the configured base (instance) directory. Note that
+     * home and base may be the same (and are by default). If this is not set
+     * the value returned by {@link #getCatalinaHomeFile()} will be used.
      * @return the catalina base as a file
      */
     public static File getCatalinaBaseFile() {
@@ -546,10 +542,9 @@ public final class Bootstrap {
 
 
     // Copied from ExceptionUtils since that class is not visible during start
-    static void handleThrowable(Throwable t) {
-        if (t instanceof StackOverflowError) {
-            // Swallow silently - it should be recoverable
-            return;
+    private static void handleThrowable(Throwable t) {
+        if (t instanceof ThreadDeath) {
+            throw (ThreadDeath) t;
         }
         if (t instanceof VirtualMachineError) {
             throw (VirtualMachineError) t;
@@ -557,16 +552,9 @@ public final class Bootstrap {
         // All other instances of Throwable will be silently swallowed
     }
 
-    // Copied from ExceptionUtils so that there is no dependency on utils
-    static Throwable unwrapInvocationTargetException(Throwable t) {
-        if (t instanceof InvocationTargetException && t.getCause() != null) {
-            return t.getCause();
-        }
-        return t;
-    }
 
     // Protected for unit testing
-    static String[] getPaths(String value) {
+    protected static String[] getPaths(String value) {
 
         List<String> result = new ArrayList<>();
         Matcher matcher = PATH_PATTERN.matcher(value);
@@ -575,7 +563,7 @@ public final class Bootstrap {
             String path = value.substring(matcher.start(), matcher.end());
 
             path = path.trim();
-            if (path.isEmpty()) {
+            if (path.length() == 0) {
                 continue;
             }
 
@@ -585,7 +573,7 @@ public final class Bootstrap {
             if (first == '"' && last == '"' && path.length() > 1) {
                 path = path.substring(1, path.length() - 1);
                 path = path.trim();
-                if (path.isEmpty()) {
+                if (path.length() == 0) {
                     continue;
                 }
             } else if (path.contains("\"")) {
@@ -594,7 +582,7 @@ public final class Bootstrap {
                 // been configured.
                 throw new IllegalArgumentException(
                         "The double quote [\"] character can only be used to quote paths. It must " +
-                                "not appear in a path. This loader path is not valid: [" + value + "]");
+                        "not appear in a path. This loader path is not valid: [" + value + "]");
             } else {
                 // Not quoted - NO-OP
             }
