@@ -20,7 +20,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
+import java.net.URL;
 import java.util.Enumeration;
 import java.util.Properties;
 
@@ -47,7 +47,6 @@ public class CatalinaProperties {
 
     /**
      * @param name The property name
-     *
      * @return specified property value
      */
     public static String getProperty(String name) {
@@ -70,7 +69,7 @@ public class CatalinaProperties {
                     // No '/'. Must be a file name rather than a URL
                     fileName = configUrl;
                 } else {
-                    is = new URI(configUrl).toURL().openStream();
+                    is = (new URL(configUrl)).openStream();
                 }
             }
         } catch (Throwable t) {
@@ -90,7 +89,8 @@ public class CatalinaProperties {
 
         if (is == null) {
             try {
-                is = CatalinaProperties.class.getResourceAsStream("/org/apache/catalina/startup/catalina.properties");
+                is = CatalinaProperties.class.getResourceAsStream
+                    ("/org/apache/catalina/startup/catalina.properties");
             } catch (Throwable t) {
                 handleThrowable(t);
             }
@@ -133,6 +133,9 @@ public class CatalinaProperties {
 
     // Copied from ExceptionUtils since that class is not visible during start
     private static void handleThrowable(Throwable t) {
+        if (t instanceof ThreadDeath) {
+            throw (ThreadDeath) t;
+        }
         if (t instanceof VirtualMachineError) {
             throw (VirtualMachineError) t;
         }
