@@ -14,16 +14,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.apache.catalina.tribes.membership.cloud;
 
 import java.io.IOException;
-import java.io.Serializable;
 import java.net.InetAddress;
 import java.net.URLEncoder;
 import java.net.UnknownHostException;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.apache.catalina.tribes.Member;
@@ -34,9 +32,11 @@ import org.apache.juli.logging.LogFactory;
 
 /**
  * A {@link org.apache.catalina.tribes.MembershipProvider} that uses DNS to retrieve the members of a cluster.<br>
+ *
  * <p>
  * <strong>Configuration example for Kubernetes</strong>
  * </p>
+ *
  * {@code server.xml }
  *
  * <pre>
@@ -59,7 +59,6 @@ import org.apache.juli.logging.LogFactory;
  *  }
  *  </pre>
  *
- * minimal example for the Service my-tomcat-app-membership, note the <strong>selector</strong><br>
  * {@code dns-membership-service.yml }
  *
  * <pre>
@@ -73,33 +72,16 @@ import org.apache.juli.logging.LogFactory;
  *   name: my-tomcat-app-membership
  * spec:
  *   clusterIP: None
+ *   ports:
+ *   - name: membership
+ *     port: 8888
  *   selector:
  *     app: my-tomcat-app
  * }
  * </pre>
  *
- * First Tomcat pod minimal example, note the <strong>labels</strong> that must correspond to the
- * <strong>selector</strong> in the service.<br>
- * {@code tomcat1.yml }
- *
- * <pre>
- * {@code
- * apiVersion: v1
- * kind: Pod
- * metadata:
- *   name: tomcat1
- *   labels:
- *     app: my-tomcat-app
- * spec:
- *   containers:
- *   - name: tomcat
- *     image: tomcat
- *     ports:
- *     - containerPort: 8080
- * }
- * </pre>
- *
  * Environment variable configuration<br>
+ *
  * {@code DNS_MEMBERSHIP_SERVICE_NAME=my-tomcat-app-membership }
  */
 
@@ -123,9 +105,9 @@ public class DNSMembershipProvider extends CloudMembershipProvider {
         }
 
         if (log.isDebugEnabled()) {
-            log.debug(sm.getString("cloudMembershipProvider.start", dnsServiceName));
+            log.debug(String.format("Namespace [%s] set; clustering enabled", dnsServiceName));
         }
-        dnsServiceName = URLEncoder.encode(dnsServiceName, StandardCharsets.UTF_8);
+        dnsServiceName = URLEncoder.encode(dnsServiceName, "UTF-8");
 
         // Fetch initial members
         heartbeat();
@@ -155,14 +137,13 @@ public class DNSMembershipProvider extends CloudMembershipProvider {
                 if (ip.equals(localIp)) {
                     // Update the UID on initial lookup
                     Member localMember = service.getLocalMember(false);
-                    if (localMember.getUniqueId() == CloudMembershipService.INITIAL_ID &&
-                            localMember instanceof MemberImpl) {
+                    if (localMember.getUniqueId() == CloudMembershipService.INITIAL_ID && localMember instanceof MemberImpl) {
                         ((MemberImpl) localMember).setUniqueId(id);
                     }
                     continue;
                 }
                 long aliveTime = -1;
-                MemberImpl member;
+                MemberImpl member = null;
                 try {
                     member = new MemberImpl(ip, port, aliveTime);
                 } catch (IOException e) {
@@ -175,38 +156,5 @@ public class DNSMembershipProvider extends CloudMembershipProvider {
         }
 
         return members.toArray(new Member[0]);
-    }
-
-    @Override
-    public boolean accept(Serializable msg, Member sender) {
-        // Check if the sender is in the member list.
-        boolean found = false;
-        Member[] members = membership.getMembers();
-        if (members != null) {
-            for (Member member : members) {
-                if (Arrays.equals(sender.getHost(), member.getHost()) && sender.getPort() == member.getPort()) {
-                    found = true;
-                    break;
-                }
-            }
-        }
-        if (!found) {
-            MemberImpl member = new MemberImpl();
-            member.setHost(sender.getHost());
-            member.setPort(sender.getPort());
-            byte[] host = sender.getHost();
-            int i = 0;
-            StringBuilder buf = new StringBuilder();
-            buf.append(host[i++] & 0xff);
-            for (; i < host.length; i++) {
-                buf.append('.').append(host[i] & 0xff);
-            }
-
-            byte[] id = md5.digest(buf.toString().getBytes());
-            member.setUniqueId(id);
-            member.setMemberAliveTime(-1);
-            updateMember(member, true);
-        }
-        return false;
     }
 }
