@@ -17,7 +17,6 @@
 package org.apache.catalina.tribes.transport;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.catalina.tribes.Member;
@@ -28,14 +27,14 @@ import org.apache.juli.logging.LogFactory;
 public abstract class PooledSender extends AbstractSender implements MultiPointSender {
 
     private static final Log log = LogFactory.getLog(PooledSender.class);
-    protected static final StringManager sm = StringManager.getManager(Constants.Package);
+    protected static final StringManager sm =
+        StringManager.getManager(Constants.Package);
 
     private final SenderQueue queue;
     private int poolSize = 25;
     private long maxWait = 3000;
-
     public PooledSender() {
-        queue = new SenderQueue(this, poolSize);
+        queue = new SenderQueue(this,poolSize);
     }
 
     public abstract DataSender getNewDataSender();
@@ -51,7 +50,7 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public synchronized void connect() throws IOException {
-        // do nothing, happens in the socket sender itself
+        //do nothing, happens in the socket sender itself
         queue.open();
         setConnected(true);
     }
@@ -91,8 +90,8 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public boolean keepalive() {
-        // do nothing, the pool checks on every return
-        return queue != null && queue.checkIdleKeepAlive();
+        //do nothing, the pool checks on every return
+        return (queue==null)?false:queue.checkIdleKeepAlive();
     }
 
     @Override
@@ -102,29 +101,29 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public void remove(Member member) {
-        // no op for now, should not cancel out any keys
-        // can create serious sync issues
-        // all TCP connections are cleared out through keepalive
-        // and if remote node disappears
+        //no op for now, should not cancel out any keys
+        //can create serious sync issues
+        //all TCP connections are cleared out through keepalive
+        //and if remote node disappears
     }
-    // ----------------------------------------------------- Inner Class
+    //  ----------------------------------------------------- Inner Class
 
     private static class SenderQueue {
-        private int limit;
+        private int limit = 25;
 
-        PooledSender parent;
+        PooledSender parent = null;
 
-        private final List<DataSender> notinuse;
+        private List<DataSender> notinuse = null;
 
-        private final List<DataSender> inuse;
+        private List<DataSender> inuse = null;
 
         private boolean isOpen = true;
 
-        SenderQueue(PooledSender parent, int limit) {
+        public SenderQueue(PooledSender parent, int limit) {
             this.limit = limit;
             this.parent = parent;
-            notinuse = new ArrayList<>();
-            inuse = new ArrayList<>();
+            notinuse = new java.util.LinkedList<>();
+            inuse = new java.util.LinkedList<>();
         }
 
         /**
@@ -133,7 +132,6 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
         public int getLimit() {
             return limit;
         }
-
         /**
          * @param limit The limit to set.
          */
@@ -141,16 +139,17 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
             this.limit = limit;
         }
 
-        public synchronized int getInUsePoolSize() {
+        public int getInUsePoolSize() {
             return inuse.size();
         }
 
-        public synchronized int getInPoolSize() {
+        public int getInPoolSize() {
             return notinuse.size();
         }
 
         public synchronized boolean checkIdleKeepAlive() {
-            DataSender[] list = notinuse.toArray(new DataSender[0]);
+            DataSender[] list = new DataSender[notinuse.size()];
+            notinuse.toArray(list);
             boolean result = false;
             for (DataSender dataSender : list) {
                 result = result | dataSender.keepalive();
@@ -160,52 +159,46 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
         public synchronized DataSender getSender(long timeout) {
             long start = System.currentTimeMillis();
-            while (true) {
-                if (!isOpen) {
-                    throw new IllegalStateException(sm.getString("pooledSender.closed.queue"));
-                }
+            while ( true ) {
+                if (!isOpen)throw new IllegalStateException(sm.getString("pooledSender.closed.queue"));
                 DataSender sender = null;
-                if (notinuse.isEmpty() && inuse.size() < limit) {
+                if (notinuse.size() == 0 && inuse.size() < limit) {
                     sender = parent.getNewDataSender();
-                } else if (!notinuse.isEmpty()) {
-                    sender = notinuse.removeFirst();
+                } else if (notinuse.size() > 0) {
+                    sender = notinuse.remove(0);
                 }
                 if (sender != null) {
                     inuse.add(sender);
                     return sender;
-                }
+                }//end if
                 long delta = System.currentTimeMillis() - start;
-                if (delta > timeout && timeout > 0) {
-                    return null;
-                } else {
+                if ( delta > timeout && timeout>0) return null;
+                else {
                     try {
-                        wait(Math.max(timeout - delta, 1));
-                    } catch (InterruptedException x) {
-                        // Ignore
-                    }
-                }
+                        wait(Math.max(timeout - delta,1));
+                    }catch (InterruptedException x){}
+                }//end if
             }
         }
 
         public synchronized void returnSender(DataSender sender) {
-            if (!isOpen) {
+            if ( !isOpen) {
                 sender.disconnect();
                 return;
             }
-            // to do
+            //to do
             inuse.remove(sender);
-            // just in case the limit has changed
-            if (notinuse.size() < this.getLimit()) {
-                notinuse.add(sender);
-            } else {
+            //just in case the limit has changed
+            if ( notinuse.size() < this.getLimit() ) notinuse.add(sender);
+            else
                 try {
                     sender.disconnect();
                 } catch (Exception e) {
                     if (log.isDebugEnabled()) {
-                        log.debug(sm.getString("PooledSender.senderDisconnectFail"), e);
+                        log.debug(sm.getString(
+                                "PooledSender.senderDisconnectFail"), e);
                     }
                 }
-            }
             notifyAll();
         }
 
@@ -216,11 +209,11 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
             for (Object value : unused) {
                 DataSender sender = (DataSender) value;
                 sender.disconnect();
-            }
+            }//for
             for (Object o : used) {
                 DataSender sender = (DataSender) o;
                 sender.disconnect();
-            }
+            }//for
             notinuse.clear();
             inuse.clear();
             notifyAll();
