@@ -17,8 +17,7 @@
 package org.apache.tomcat.util.scan;
 
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.regex.Matcher;
 
@@ -54,7 +53,8 @@ public class JarFactory {
     }
 
 
-    public static URL getJarEntryURL(URL baseUrl, String entryName) throws IOException {
+    public static URL getJarEntryURL(URL baseUrl, String entryName)
+            throws MalformedURLException {
 
         String baseExternal = baseUrl.toExternalForm();
 
@@ -66,12 +66,6 @@ public class JarFactory {
                     Matcher.quoteReplacement(UriUtil.getWarSeparator()));
         }
 
-        URI uri;
-        try {
-            uri = new URI("jar:" + baseExternal + "!/" + entryName);
-        } catch (URISyntaxException e) {
-            throw new IOException(e);
-        }
-        return uri.toURL();
+        return new URL("jar:" + baseExternal + "!/" + entryName);
     }
 }
