@@ -19,7 +19,6 @@ package org.apache.tomcat.websocket;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.Writer;
-import java.lang.reflect.InvocationTargetException;
 import java.net.SocketTimeoutException;
 import java.nio.ByteBuffer;
 import java.nio.CharBuffer;
@@ -33,39 +32,38 @@ import java.util.concurrent.Future;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.locks.ReentrantLock;
 
-import javax.naming.NamingException;
-
-import jakarta.websocket.CloseReason;
-import jakarta.websocket.CloseReason.CloseCodes;
-import jakarta.websocket.DeploymentException;
-import jakarta.websocket.EncodeException;
-import jakarta.websocket.Encoder;
-import jakarta.websocket.EndpointConfig;
-import jakarta.websocket.RemoteEndpoint;
-import jakarta.websocket.SendHandler;
-import jakarta.websocket.SendResult;
+import javax.websocket.CloseReason;
+import javax.websocket.CloseReason.CloseCodes;
+import javax.websocket.DeploymentException;
+import javax.websocket.EncodeException;
+import javax.websocket.Encoder;
+import javax.websocket.EndpointConfig;
+import javax.websocket.RemoteEndpoint;
+import javax.websocket.SendHandler;
+import javax.websocket.SendResult;
 
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
-import org.apache.tomcat.InstanceManager;
-import org.apache.tomcat.util.ExceptionUtils;
 import org.apache.tomcat.util.buf.Utf8Encoder;
 import org.apache.tomcat.util.res.StringManager;
 
 public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
-    protected static final StringManager sm = StringManager.getManager(WsRemoteEndpointImplBase.class);
+    protected static final StringManager sm =
+            StringManager.getManager(WsRemoteEndpointImplBase.class);
+
+    protected static final SendResult SENDRESULT_OK = new SendResult();
 
     private final Log log = LogFactory.getLog(WsRemoteEndpointImplBase.class); // must not be static
 
     private final StateMachine stateMachine = new StateMachine();
 
-    private final IntermediateMessageHandler intermediateMessageHandler = new IntermediateMessageHandler(this);
+    private final IntermediateMessageHandler intermediateMessageHandler =
+            new IntermediateMessageHandler(this);
 
     private Transformation transformation = null;
-    protected final Semaphore messagePartInProgress = new Semaphore(1);
+    private final Semaphore messagePartInProgress = new Semaphore(1);
     private final Queue<MessagePart> messagePartQueue = new ArrayDeque<>();
     private final Object messagePartLock = new Object();
 
@@ -84,7 +82,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     private final AtomicBoolean batchingAllowed = new AtomicBoolean(false);
     private volatile long sendTimeout = -1;
     private WsSession wsSession;
-    private final List<EncoderEntry> encoderEntries = new ArrayList<>();
+    private List<EncoderEntry> encoderEntries = new ArrayList<>();
 
 
     protected void setTransformation(Transformation transformation) {
@@ -99,11 +97,6 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
     public void setSendTimeout(long timeout) {
         this.sendTimeout = timeout;
-    }
-
-
-    protected WsSession getSession() {
-        return wsSession;
     }
 
 
@@ -159,7 +152,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    public void sendPartialBytes(ByteBuffer partialByte, boolean last) throws IOException {
+    public void sendPartialBytes(ByteBuffer partialByte, boolean last)
+            throws IOException {
         if (partialByte == null) {
             throw new IllegalArgumentException(sm.getString("wsRemoteEndpoint.nullData"));
         }
@@ -170,7 +164,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
 
     @Override
-    public void sendPing(ByteBuffer applicationData) throws IOException, IllegalArgumentException {
+    public void sendPing(ByteBuffer applicationData) throws IOException,
+            IllegalArgumentException {
         if (applicationData.remaining() > 125) {
             throw new IllegalArgumentException(sm.getString("wsRemoteEndpoint.tooMuchData"));
         }
@@ -179,7 +174,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
 
     @Override
-    public void sendPong(ByteBuffer applicationData) throws IOException, IllegalArgumentException {
+    public void sendPong(ByteBuffer applicationData) throws IOException,
+            IllegalArgumentException {
         if (applicationData.remaining() > 125) {
             throw new IllegalArgumentException(sm.getString("wsRemoteEndpoint.tooMuchData"));
         }
@@ -211,14 +207,15 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             throw new IllegalArgumentException(sm.getString("wsRemoteEndpoint.nullHandler"));
         }
         stateMachine.textStart();
-        TextMessageSendHandler tmsh = new TextMessageSendHandler(handler, CharBuffer.wrap(text), true, encoder,
-                encoderBuffer, this);
+        TextMessageSendHandler tmsh = new TextMessageSendHandler(handler,
+                CharBuffer.wrap(text), true, encoder, encoderBuffer, this);
         tmsh.write();
         // TextMessageSendHandler will update stateMachine when it completes
     }
 
 
-    public void sendPartialString(String fragment, boolean isLast) throws IOException {
+    public void sendPartialString(String fragment, boolean isLast)
+            throws IOException {
         if (fragment == null) {
             throw new IllegalArgumentException(sm.getString("wsRemoteEndpoint.nullData"));
         }
@@ -240,37 +237,33 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
 
     void sendMessageBlock(CharBuffer part, boolean last) throws IOException {
-        long timeout = getBlockingSendTimeout();
+        long timeoutExpiry = getTimeoutExpiry();
         boolean isDone = false;
         while (!isDone) {
             encoderBuffer.clear();
             CoderResult cr = encoder.encode(part, encoderBuffer, true);
             if (cr.isError()) {
-                throw new IllegalArgumentException(sm.getString("wsRemoteEndpoint.encoderError", cr));
+                throw new IllegalArgumentException(cr.toString());
             }
             isDone = !cr.isOverflow();
             encoderBuffer.flip();
-            sendMessageBlock(Constants.OPCODE_TEXT, encoderBuffer, last && isDone, timeout);
+            sendMessageBlock(Constants.OPCODE_TEXT, encoderBuffer, last && isDone, timeoutExpiry);
         }
         stateMachine.complete(last);
     }
 
 
-    void sendMessageBlock(byte opCode, ByteBuffer payload, boolean last) throws IOException {
-        sendMessageBlock(opCode, payload, last, getBlockingSendTimeout());
+    void sendMessageBlock(byte opCode, ByteBuffer payload, boolean last)
+            throws IOException {
+        sendMessageBlock(opCode, payload, last, getTimeoutExpiry());
     }
 
 
-    void sendMessageBlock(byte opCode, ByteBuffer payload, boolean last, long timeout) throws IOException {
-        /*
-         *  Get the timeout before we send the message. The message may trigger a session close and depending on timing
-         *  the client session may close before we can read the timeout.
-         */
-        sendMessageBlockInternal(opCode, payload, last, getTimeoutExpiry(timeout));
-    }
-
-
-    private long getTimeoutExpiry(long timeout) {
+    private long getTimeoutExpiry() {
+        // Get the timeout before we send the message. The message may
+        // trigger a session close and depending on timing the client
+        // session may close before we can read the timeout.
+        long timeout = getBlockingSendTimeout();
         if (timeout < 0) {
             return Long.MAX_VALUE;
         } else {
@@ -279,9 +272,9 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    private void sendMessageBlockInternal(byte opCode, ByteBuffer payload, boolean last, long timeoutExpiry)
-            throws IOException {
-        wsSession.updateLastActiveWrite();
+    private void sendMessageBlock(byte opCode, ByteBuffer payload, boolean last,
+            long timeoutExpiry) throws IOException {
+        wsSession.updateLastActive();
 
         BlockingSendHandler bsh = new BlockingSendHandler();
 
@@ -293,40 +286,33 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         // Some extensions/transformations may buffer messages so it is possible
         // that no message parts will be returned. If this is the case simply
         // return.
-        if (messageParts.isEmpty()) {
+        if (messageParts.size() == 0) {
             return;
         }
 
+        long timeout = timeoutExpiry - System.currentTimeMillis();
         try {
-            if (!acquireMessagePartInProgressSemaphore(opCode, timeoutExpiry)) {
+            if (!messagePartInProgress.tryAcquire(timeout, TimeUnit.MILLISECONDS)) {
                 String msg = sm.getString("wsRemoteEndpoint.acquireTimeout");
                 wsSession.doClose(new CloseReason(CloseCodes.GOING_AWAY, msg),
-                        new CloseReason(CloseCodes.CLOSED_ABNORMALLY, msg), true);
+                        new CloseReason(CloseCodes.CLOSED_ABNORMALLY, msg));
                 throw new SocketTimeoutException(msg);
             }
         } catch (InterruptedException e) {
             String msg = sm.getString("wsRemoteEndpoint.sendInterrupt");
             wsSession.doClose(new CloseReason(CloseCodes.GOING_AWAY, msg),
-                    new CloseReason(CloseCodes.CLOSED_ABNORMALLY, msg), true);
+                    new CloseReason(CloseCodes.CLOSED_ABNORMALLY, msg));
             throw new IOException(msg, e);
         }
 
         for (MessagePart mp : messageParts) {
-            try {
-                writeMessagePart(mp);
-            } catch (Throwable t) {
-                ExceptionUtils.handleThrowable(t);
-                messagePartInProgress.release();
-                wsSession.doClose(new CloseReason(CloseCodes.GOING_AWAY, t.getMessage()),
-                        new CloseReason(CloseCodes.CLOSED_ABNORMALLY, t.getMessage()), true);
-                throw t;
-            }
+            writeMessagePart(mp);
             if (!bsh.getSendResult().isOK()) {
                 messagePartInProgress.release();
                 Throwable t = bsh.getSendResult().getException();
                 wsSession.doClose(new CloseReason(CloseCodes.GOING_AWAY, t.getMessage()),
-                        new CloseReason(CloseCodes.CLOSED_ABNORMALLY, t.getMessage()), true);
-                throw new IOException(t);
+                        new CloseReason(CloseCodes.CLOSED_ABNORMALLY, t.getMessage()));
+                throw new IOException (t);
             }
             // The BlockingSendHandler doesn't call end message so update the
             // flags.
@@ -342,52 +328,37 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    /**
-     * Acquire the semaphore that allows a message part to be written.
-     *
-     * @param opCode        The OPCODE for the message to be written
-     * @param timeoutExpiry The time when the attempt to acquire the semaphore should expire
-     *
-     * @return {@code true} if the semaphore is obtained, otherwise {@code false}.
-     *
-     * @throws InterruptedException If the wait for the semaphore is interrupted
-     */
-    protected boolean acquireMessagePartInProgressSemaphore(byte opCode, long timeoutExpiry)
-            throws InterruptedException {
-        long timeout = timeoutExpiry - System.currentTimeMillis();
-        return messagePartInProgress.tryAcquire(timeout, TimeUnit.MILLISECONDS);
-    }
+    void startMessage(byte opCode, ByteBuffer payload, boolean last,
+            SendHandler handler) {
 
-
-    void startMessage(byte opCode, ByteBuffer payload, boolean last, SendHandler handler) {
-
-        wsSession.updateLastActiveWrite();
+        wsSession.updateLastActive();
 
         List<MessagePart> messageParts = new ArrayList<>();
-        messageParts.add(new MessagePart(last, 0, opCode, payload, intermediateMessageHandler,
+        messageParts.add(new MessagePart(last, 0, opCode, payload,
+                intermediateMessageHandler,
                 new EndMessageHandler(this, handler), -1));
 
         try {
             messageParts = transformation.sendMessagePart(messageParts);
         } catch (IOException ioe) {
-            handler.onResult(new SendResult(getSession(), ioe));
+            handler.onResult(new SendResult(ioe));
             return;
         }
 
         // Some extensions/transformations may buffer messages so it is possible
         // that no message parts will be returned. If this is the case the
         // trigger the supplied SendHandler
-        if (messageParts.isEmpty()) {
-            handler.onResult(new SendResult(getSession()));
+        if (messageParts.size() == 0) {
+            handler.onResult(new SendResult());
             return;
         }
 
-        MessagePart mp = messageParts.removeFirst();
+        MessagePart mp = messageParts.remove(0);
 
         boolean doWrite = false;
         synchronized (messagePartLock) {
             if (Constants.OPCODE_CLOSE == mp.getOpCode() && getBatchingAllowed()) {
-                // Should not happen. Too late to send batched messages now since
+                // Should not happen. To late to send batched messages now since
                 // the session has been closed. Complain loudly.
                 log.warn(sm.getString("wsRemoteEndpoint.flushOnCloseFailed"));
             }
@@ -419,7 +390,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
     void endMessage(SendHandler handler, SendResult result) {
         boolean doWrite = false;
-        MessagePart mpNext;
+        MessagePart mpNext = null;
         synchronized (messagePartLock) {
 
             fragmented = nextFragmented;
@@ -428,7 +399,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             mpNext = messagePartQueue.poll();
             if (mpNext == null) {
                 messagePartInProgress.release();
-            } else if (!closed) {
+            } else if (!closed){
                 // Session may have been closed unexpectedly in the middle of
                 // sending a fragmented message closing the endpoint. If this
                 // happens, clearly there is no point trying to send the rest of
@@ -443,7 +414,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             writeMessagePart(mpNext);
         }
 
-        wsSession.updateLastActiveWrite();
+        wsSession.updateLastActive();
 
         // Some handlers, such as the IntermediateMessageHandler, do not have a
         // nested handler so handler may be null.
@@ -455,14 +426,16 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
     void writeMessagePart(MessagePart mp) {
         if (closed) {
-            throw new IllegalStateException(sm.getString("wsRemoteEndpoint.closed"));
+            throw new IllegalStateException(
+                    sm.getString("wsRemoteEndpoint.closed"));
         }
 
         if (Constants.INTERNAL_OPCODE_FLUSH == mp.getOpCode()) {
             nextFragmented = fragmented;
             nextText = text;
             outputBuffer.flip();
-            SendHandler flushHandler = new OutputBufferFlushSendHandler(outputBuffer, mp.getEndHandler());
+            SendHandler flushHandler = new OutputBufferFlushSendHandler(
+                    outputBuffer, mp.getEndHandler());
             doWrite(flushHandler, mp.getBlockingWriteTimeoutExpiry(), outputBuffer);
             return;
         }
@@ -483,7 +456,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             if (fragmented) {
                 // Currently fragmented
                 if (text != isText) {
-                    throw new IllegalStateException(sm.getString("wsRemoteEndpoint.changeType"));
+                    throw new IllegalStateException(
+                            sm.getString("wsRemoteEndpoint.changeType"));
                 }
                 nextText = text;
                 nextFragmented = !mp.isFin();
@@ -508,34 +482,23 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             mask = null;
         }
 
-        int payloadSize = mp.getPayload().remaining();
         headerBuffer.clear();
-        writeHeader(headerBuffer, mp.isFin(), mp.getRsv(), mp.getOpCode(), isMasked(), mp.getPayload(), mask, first);
+        writeHeader(headerBuffer, mp.isFin(), mp.getRsv(), mp.getOpCode(),
+                isMasked(), mp.getPayload(), mask, first);
         headerBuffer.flip();
 
         if (getBatchingAllowed() || isMasked()) {
             // Need to write via output buffer
-            OutputBufferSendHandler obsh = new OutputBufferSendHandler(mp.getEndHandler(),
-                    mp.getBlockingWriteTimeoutExpiry(), headerBuffer, mp.getPayload(), mask, outputBuffer,
-                    !getBatchingAllowed(), this);
+            OutputBufferSendHandler obsh = new OutputBufferSendHandler(
+                    mp.getEndHandler(), mp.getBlockingWriteTimeoutExpiry(),
+                    headerBuffer, mp.getPayload(), mask,
+                    outputBuffer, !getBatchingAllowed(), this);
             obsh.write();
         } else {
             // Can write directly
-            doWrite(mp.getEndHandler(), mp.getBlockingWriteTimeoutExpiry(), headerBuffer, mp.getPayload());
+            doWrite(mp.getEndHandler(), mp.getBlockingWriteTimeoutExpiry(),
+                    headerBuffer, mp.getPayload());
         }
-
-        updateStats(payloadSize);
-    }
-
-
-    /**
-     * Hook for updating server side statistics. Called on every frame written (including when batching is enabled and
-     * the frames are buffered locally until the buffer is full or is flushed).
-     *
-     * @param payloadLength Size of message payload
-     */
-    protected void updateStats(long payloadLength) {
-        // NO-OP by default
     }
 
 
@@ -554,10 +517,21 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
 
     /**
-     * Wraps the user provided handler so that the end point is notified when the message is complete.
+     * Wraps the user provided handler so that the end point is notified when
+     * the message is complete.
      */
-    private record EndMessageHandler(WsRemoteEndpointImplBase endpoint,
-                                     SendHandler handler) implements SendHandler {
+    private static class EndMessageHandler implements SendHandler {
+
+        private final WsRemoteEndpointImplBase endpoint;
+        private final SendHandler handler;
+
+        public EndMessageHandler(WsRemoteEndpointImplBase endpoint,
+                SendHandler handler) {
+            this.endpoint = endpoint;
+            this.handler = handler;
+        }
+
+
         @Override
         public void onResult(SendResult result) {
             endpoint.endMessage(handler, result);
@@ -566,14 +540,23 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
 
     /**
-     * If a transformation needs to split a {@link MessagePart} into multiple {@link MessagePart}s, it uses this handler
-     * as the end handler for each of the additional {@link MessagePart}s. This handler notifies this class that
-     * the {@link MessagePart} has been processed and that the next {@link MessagePart} in the queue should be started.
-     * The final {@link MessagePart} will use the {@link EndMessageHandler} provided with the original
-     * {@link MessagePart}.
+     * If a transformation needs to split a {@link MessagePart} into multiple
+     * {@link MessagePart}s, it uses this handler as the end handler for each of
+     * the additional {@link MessagePart}s. This handler notifies this this
+     * class that the {@link MessagePart} has been processed and that the next
+     * {@link MessagePart} in the queue should be started. The final
+     * {@link MessagePart} will use the {@link EndMessageHandler} provided with
+     * the original {@link MessagePart}.
      */
-    private record IntermediateMessageHandler(
-            WsRemoteEndpointImplBase endpoint) implements SendHandler {
+    private static class IntermediateMessageHandler implements SendHandler {
+
+        private final WsRemoteEndpointImplBase endpoint;
+
+        public IntermediateMessageHandler(WsRemoteEndpointImplBase endpoint) {
+            this.endpoint = endpoint;
+        }
+
+
         @Override
         public void onResult(SendResult result) {
             endpoint.endMessage(null, result);
@@ -581,14 +564,15 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    @SuppressWarnings({ "unchecked", "rawtypes", "null" })
+    @SuppressWarnings({"unchecked", "rawtypes"})
     public void sendObject(Object obj) throws IOException, EncodeException {
         if (obj == null) {
             throw new IllegalArgumentException(sm.getString("wsRemoteEndpoint.nullData"));
         }
         /*
-         * Note that the implementation will convert primitives and their object equivalents by default but that users
-         * are free to specify their own encoders and decoders for this if they wish.
+         * Note that the implementation will convert primitives and their object
+         * equivalents by default but that users are free to specify their own
+         * encoders and decoders for this if they wish.
          */
         Encoder encoder = findEncoder(obj);
         if (encoder == null && Util.isPrimitive(obj.getClass())) {
@@ -602,27 +586,23 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             return;
         }
 
-        switch (encoder) {
-            case Encoder.Text text1 -> {
-                String msg = text1.encode(obj);
-                sendString(msg);
+        if (encoder instanceof Encoder.Text) {
+            String msg = ((Encoder.Text) encoder).encode(obj);
+            sendString(msg);
+        } else if (encoder instanceof Encoder.TextStream) {
+            try (Writer w = getSendWriter()) {
+                ((Encoder.TextStream) encoder).encode(obj, w);
             }
-            case @SuppressWarnings("unused") Encoder.TextStream textStream -> {
-                try (Writer w = getSendWriter()) {
-                    ((Encoder.TextStream) encoder).encode(obj, w);
-                }
+        } else if (encoder instanceof Encoder.Binary) {
+            ByteBuffer msg = ((Encoder.Binary) encoder).encode(obj);
+            sendBytes(msg);
+        } else if (encoder instanceof Encoder.BinaryStream) {
+            try (OutputStream os = getSendStream()) {
+                ((Encoder.BinaryStream) encoder).encode(obj, os);
             }
-            case Encoder.Binary binary -> {
-                ByteBuffer msg = binary.encode(obj);
-                sendBytes(msg);
-            }
-            case @SuppressWarnings("unused") Encoder.BinaryStream binaryStream -> {
-                try (OutputStream os = getSendStream()) {
-                    ((Encoder.BinaryStream) encoder).encode(obj, os);
-                }
-            }
-            case null, default ->
-                    throw new EncodeException(obj, sm.getString("wsRemoteEndpoint.noEncoder", obj.getClass()));
+        } else {
+            throw new EncodeException(obj, sm.getString(
+                    "wsRemoteEndpoint.noEncoder", obj.getClass()));
         }
     }
 
@@ -634,7 +614,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    @SuppressWarnings({ "unchecked", "rawtypes", "null" })
+    @SuppressWarnings({"unchecked", "rawtypes"})
     public void sendObjectByCompletion(Object obj, SendHandler completion) {
 
         if (obj == null) {
@@ -645,8 +625,9 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         }
 
         /*
-         * Note that the implementation will convert primitives and their object equivalents by default but that users
-         * are free to specify their own encoders and decoders for this if they wish.
+         * Note that the implementation will convert primitives and their object
+         * equivalents by default but that users are free to specify their own
+         * encoders and decoders for this if they wish.
          */
         Encoder encoder = findEncoder(obj);
         if (encoder == null && Util.isPrimitive(obj.getClass())) {
@@ -661,32 +642,28 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         }
 
         try {
-            switch (encoder) {
-                case Encoder.Text text1 -> {
-                    String msg = text1.encode(obj);
-                    sendStringByCompletion(msg, completion);
+            if (encoder instanceof Encoder.Text) {
+                String msg = ((Encoder.Text) encoder).encode(obj);
+                sendStringByCompletion(msg, completion);
+            } else if (encoder instanceof Encoder.TextStream) {
+                try (Writer w = getSendWriter()) {
+                    ((Encoder.TextStream) encoder).encode(obj, w);
                 }
-                case @SuppressWarnings("unused") Encoder.TextStream textStream -> {
-                    try (Writer w = getSendWriter()) {
-                        ((Encoder.TextStream) encoder).encode(obj, w);
-                    }
-                    completion.onResult(new SendResult(getSession()));
+                completion.onResult(new SendResult());
+            } else if (encoder instanceof Encoder.Binary) {
+                ByteBuffer msg = ((Encoder.Binary) encoder).encode(obj);
+                sendBytesByCompletion(msg, completion);
+            } else if (encoder instanceof Encoder.BinaryStream) {
+                try (OutputStream os = getSendStream()) {
+                    ((Encoder.BinaryStream) encoder).encode(obj, os);
                 }
-                case Encoder.Binary binary -> {
-                    ByteBuffer msg = binary.encode(obj);
-                    sendBytesByCompletion(msg, completion);
-                }
-                case @SuppressWarnings("unused") Encoder.BinaryStream binaryStream -> {
-                    try (OutputStream os = getSendStream()) {
-                        ((Encoder.BinaryStream) encoder).encode(obj, os);
-                    }
-                    completion.onResult(new SendResult(getSession()));
-                }
-                case null, default ->
-                        throw new EncodeException(obj, sm.getString("wsRemoteEndpoint.noEncoder", obj.getClass()));
+                completion.onResult(new SendResult());
+            } else {
+                throw new EncodeException(obj, sm.getString(
+                        "wsRemoteEndpoint.noEncoder", obj.getClass()));
             }
         } catch (Exception e) {
-            SendResult sr = new SendResult(getSession(), e);
+            SendResult sr = new SendResult(e);
             completion.onResult(sr);
         }
     }
@@ -697,23 +674,22 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    protected void setEncoders(EndpointConfig endpointConfig) throws DeploymentException {
+    protected void setEncoders(EndpointConfig endpointConfig)
+            throws DeploymentException {
         encoderEntries.clear();
-        for (Class<? extends Encoder> encoderClazz : endpointConfig.getEncoders()) {
+        for (Class<? extends Encoder> encoderClazz :
+                endpointConfig.getEncoders()) {
             Encoder instance;
-            InstanceManager instanceManager = wsSession.getInstanceManager();
             try {
-                if (instanceManager == null) {
-                    instance = encoderClazz.getConstructor().newInstance();
-                } else {
-                    instance = (Encoder) instanceManager.newInstance(encoderClazz);
-                }
+                instance = encoderClazz.getConstructor().newInstance();
                 instance.init(endpointConfig);
-            } catch (ReflectiveOperationException | NamingException e) {
-                throw new DeploymentException(sm.getString("wsRemoteEndpoint.invalidEncoder", encoderClazz.getName()),
-                        e);
+            } catch (ReflectiveOperationException e) {
+                throw new DeploymentException(
+                        sm.getString("wsRemoteEndpoint.invalidEncoder",
+                                encoderClazz.getName()), e);
             }
-            EncoderEntry entry = new EncoderEntry(Util.getEncoderType(encoderClazz), instance);
+            EncoderEntry entry = new EncoderEntry(
+                    Util.getEncoderType(encoderClazz), instance);
             encoderEntries.add(entry);
         }
     }
@@ -721,8 +697,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
     private Encoder findEncoder(Object obj) {
         for (EncoderEntry entry : encoderEntries) {
-            if (entry.clazz().isAssignableFrom(obj.getClass())) {
-                return entry.encoder();
+            if (entry.getClazz().isAssignableFrom(obj.getClass())) {
+                return entry.getEncoder();
             }
         }
         return null;
@@ -730,16 +706,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
 
     public final void close() {
-        InstanceManager instanceManager = wsSession.getInstanceManager();
         for (EncoderEntry entry : encoderEntries) {
-            entry.encoder().destroy();
-            if (instanceManager != null) {
-                try {
-                    instanceManager.destroyInstance(entry);
-                } catch (IllegalAccessException | InvocationTargetException e) {
-                    log.warn(sm.getString("wsRemoteEndpoint.encoderDestroyFailed", encoder.getClass()), e);
-                }
-            }
+            entry.getEncoder().destroy();
         }
         // The transformation handles both input and output. It only needs to be
         // closed once so it is closed here on the output side.
@@ -748,26 +716,23 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    protected abstract void doWrite(SendHandler handler, long blockingWriteTimeoutExpiry, ByteBuffer... data);
-
+    protected abstract void doWrite(SendHandler handler, long blockingWriteTimeoutExpiry,
+            ByteBuffer... data);
     protected abstract boolean isMasked();
-
     protected abstract void doClose();
 
-    protected abstract ReentrantLock getLock();
-
-
-    private static void writeHeader(ByteBuffer headerBuffer, boolean fin, int rsv, byte opCode, boolean masked,
-            ByteBuffer payload, byte[] mask, boolean first) {
+    private static void writeHeader(ByteBuffer headerBuffer, boolean fin,
+            int rsv, byte opCode, boolean masked, ByteBuffer payload,
+            byte[] mask, boolean first) {
 
         byte b = 0;
 
         if (fin) {
             // Set the fin bit
-            b -= (byte) 128;
+            b -= 128;
         }
 
-        b += (byte) (rsv << 4);
+        b += (rsv << 4);
 
         if (first) {
             // This is the first fragment of this message
@@ -783,7 +748,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             b = 0;
         }
 
-        // Next write the mask && length
+        // Next write the mask && length length
         if (payload.remaining() < 126) {
             headerBuffer.put((byte) (payload.remaining() | b));
         } else if (payload.remaining() < 65536) {
@@ -821,7 +786,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         private final WsRemoteEndpointImplBase endpoint;
         private volatile boolean isDone = false;
 
-        TextMessageSendHandler(SendHandler handler, CharBuffer message, boolean isLast, CharsetEncoder encoder,
+        public TextMessageSendHandler(SendHandler handler, CharBuffer message,
+                boolean isLast, CharsetEncoder encoder,
                 ByteBuffer encoderBuffer, WsRemoteEndpointImplBase endpoint) {
             this.handler = handler;
             this.message = message;
@@ -839,7 +805,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             }
             isDone = !cr.isOverflow();
             buffer.flip();
-            endpoint.startMessage(Constants.OPCODE_TEXT, buffer, isDone && isLast, this);
+            endpoint.startMessage(Constants.OPCODE_TEXT, buffer,
+                    isDone && isLast, this);
         }
 
         @Override
@@ -847,11 +814,11 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             if (isDone) {
                 endpoint.stateMachine.complete(isLast);
                 handler.onResult(result);
-            } else if (!result.isOK()) {
+            } else if(!result.isOK()) {
                 handler.onResult(result);
-            } else if (closed) {
-                SendResult sr = new SendResult(getSession(),
-                        new IOException(sm.getString("wsRemoteEndpoint.closedDuringMessage")));
+            } else if (closed){
+                SendResult sr = new SendResult(new IOException(
+                        sm.getString("wsRemoteEndpoint.closedDuringMessage")));
                 handler.onResult(sr);
             } else {
                 write();
@@ -861,7 +828,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
 
     /**
-     * Used to write data to the output buffer, flushing the buffer if it fills up.
+     * Used to write data to the output buffer, flushing the buffer if it fills
+     * up.
      */
     private static class OutputBufferSendHandler implements SendHandler {
 
@@ -875,8 +843,10 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         private final WsRemoteEndpointImplBase endpoint;
         private volatile int maskIndex = 0;
 
-        OutputBufferSendHandler(SendHandler completion, long blockingWriteTimeoutExpiry, ByteBuffer headerBuffer,
-                ByteBuffer payload, byte[] mask, ByteBuffer outputBuffer, boolean flushRequired,
+        public OutputBufferSendHandler(SendHandler completion,
+                long blockingWriteTimeoutExpiry,
+                ByteBuffer headerBuffer, ByteBuffer payload, byte[] mask,
+                ByteBuffer outputBuffer, boolean flushRequired,
                 WsRemoteEndpointImplBase endpoint) {
             this.blockingWriteTimeoutExpiry = blockingWriteTimeoutExpiry;
             this.handler = completion;
@@ -917,7 +887,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                 outputBuffer.put(payload);
             } else {
                 for (int i = 0; i < toWrite; i++) {
-                    outputBuffer.put((byte) (payload.get() ^ (mask[maskIndex++] & 0xFF)));
+                    outputBuffer.put(
+                            (byte) (payload.get() ^ (mask[maskIndex++] & 0xFF)));
                     if (maskIndex > 3) {
                         maskIndex = 0;
                     }
@@ -936,12 +907,12 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             if (flushRequired) {
                 outputBuffer.flip();
                 if (outputBuffer.remaining() == 0) {
-                    handler.onResult(new SendResult(endpoint.getSession()));
+                    handler.onResult(SENDRESULT_OK);
                 } else {
                     endpoint.doWrite(this, blockingWriteTimeoutExpiry, outputBuffer);
                 }
             } else {
-                handler.onResult(new SendResult(endpoint.getSession()));
+                handler.onResult(SENDRESULT_OK);
             }
         }
 
@@ -965,8 +936,15 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     /**
      * Ensures that the output buffer is cleared after it has been flushed.
      */
-    private record OutputBufferFlushSendHandler(ByteBuffer outputBuffer,
-                                                SendHandler handler) implements SendHandler {
+    private static class OutputBufferFlushSendHandler implements SendHandler {
+
+        private final ByteBuffer outputBuffer;
+        private final SendHandler handler;
+
+        public OutputBufferFlushSendHandler(ByteBuffer outputBuffer, SendHandler handler) {
+            this.outputBuffer = outputBuffer;
+            this.handler = handler;
+        }
 
         @Override
         public void onResult(SendResult result) {
@@ -986,14 +964,15 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         private volatile boolean closed = false;
         private volatile boolean used = false;
 
-        WsOutputStream(WsRemoteEndpointImplBase endpoint) {
+        public WsOutputStream(WsRemoteEndpointImplBase endpoint) {
             this.endpoint = endpoint;
         }
 
         @Override
         public void write(int b) throws IOException {
             if (closed) {
-                throw new IllegalStateException(sm.getString("wsRemoteEndpoint.closedOutputStream"));
+                throw new IllegalStateException(
+                        sm.getString("wsRemoteEndpoint.closedOutputStream"));
             }
 
             used = true;
@@ -1006,9 +985,11 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         @Override
         public void write(byte[] b, int off, int len) throws IOException {
             if (closed) {
-                throw new IllegalStateException(sm.getString("wsRemoteEndpoint.closedOutputStream"));
+                throw new IllegalStateException(
+                        sm.getString("wsRemoteEndpoint.closedOutputStream"));
             }
-            if ((off < 0) || (off > b.length) || (len < 0) || ((off + len) > b.length) || ((off + len) < 0)) {
+            if ((off < 0) || (off > b.length) || (len < 0) ||
+                ((off + len) > b.length) || ((off + len) < 0)) {
                 throw new IndexOutOfBoundsException();
             }
 
@@ -1036,7 +1017,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         @Override
         public void flush() throws IOException {
             if (closed) {
-                throw new IllegalStateException(sm.getString("wsRemoteEndpoint.closedOutputStream"));
+                throw new IllegalStateException(
+                        sm.getString("wsRemoteEndpoint.closedOutputStream"));
             }
 
             // Optimisation. If there is no data to flush then do not send an
@@ -1077,16 +1059,18 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         private volatile boolean closed = false;
         private volatile boolean used = false;
 
-        WsWriter(WsRemoteEndpointImplBase endpoint) {
+        public WsWriter(WsRemoteEndpointImplBase endpoint) {
             this.endpoint = endpoint;
         }
 
         @Override
         public void write(char[] cbuf, int off, int len) throws IOException {
             if (closed) {
-                throw new IllegalStateException(sm.getString("wsRemoteEndpoint.closedWriter"));
+                throw new IllegalStateException(
+                        sm.getString("wsRemoteEndpoint.closedWriter"));
             }
-            if ((off < 0) || (off > cbuf.length) || (len < 0) || ((off + len) > cbuf.length) || ((off + len) < 0)) {
+            if ((off < 0) || (off > cbuf.length) || (len < 0) ||
+                    ((off + len) > cbuf.length) || ((off + len) < 0)) {
                 throw new IndexOutOfBoundsException();
             }
 
@@ -1114,7 +1098,8 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         @Override
         public void flush() throws IOException {
             if (closed) {
-                throw new IllegalStateException(sm.getString("wsRemoteEndpoint.closedWriter"));
+                throw new IllegalStateException(
+                        sm.getString("wsRemoteEndpoint.closedWriter"));
             }
 
             if (buffer.position() > 0) {
@@ -1146,7 +1131,23 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    private record EncoderEntry(Class<?> clazz, Encoder encoder) {
+    private static class EncoderEntry {
+
+        private final Class<?> clazz;
+        private final Encoder encoder;
+
+        public EncoderEntry(Class<?> clazz, Encoder encoder) {
+            this.clazz = clazz;
+            this.encoder = encoder;
+        }
+
+        public Class<?> getClazz() {
+            return clazz;
+        }
+
+        public Encoder getEncoder() {
+            return encoder;
+        }
     }
 
 
@@ -1198,20 +1199,27 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
         public synchronized void complete(boolean last) {
             if (last) {
-                checkState(State.TEXT_PARTIAL_WRITING, State.TEXT_FULL_WRITING, State.BINARY_PARTIAL_WRITING,
-                        State.BINARY_FULL_WRITING, State.STREAM_WRITING, State.WRITER_WRITING);
+                checkState(State.TEXT_PARTIAL_WRITING, State.TEXT_FULL_WRITING,
+                        State.BINARY_PARTIAL_WRITING, State.BINARY_FULL_WRITING,
+                        State.STREAM_WRITING, State.WRITER_WRITING);
                 state = State.OPEN;
             } else {
-                checkState(State.TEXT_PARTIAL_WRITING, State.BINARY_PARTIAL_WRITING, State.STREAM_WRITING,
-                        State.WRITER_WRITING);
+                checkState(State.TEXT_PARTIAL_WRITING, State.BINARY_PARTIAL_WRITING,
+                        State.STREAM_WRITING, State.WRITER_WRITING);
                 if (state == State.TEXT_PARTIAL_WRITING) {
                     state = State.TEXT_PARTIAL_READY;
-                } else if (state == State.BINARY_PARTIAL_WRITING) {
+                } else if (state == State.BINARY_PARTIAL_WRITING){
                     state = State.BINARY_PARTIAL_READY;
                 } else if (state == State.WRITER_WRITING) {
                     // NO-OP. Leave state as is.
                 } else if (state == State.STREAM_WRITING) {
-                    // NO-OP. Leave state as is.
+                 // NO-OP. Leave state as is.
+                } else {
+                    // Should never happen
+                    // The if ... else ... blocks above should cover all states
+                    // permitted by the preceding checkState() call
+                    throw new IllegalStateException(
+                            "BUG: This code should never be called");
                 }
             }
         }
@@ -1222,13 +1230,22 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                     return;
                 }
             }
-            throw new IllegalStateException(sm.getString("wsRemoteEndpoint.wrongState", this.state));
+            throw new IllegalStateException(
+                    sm.getString("wsRemoteEndpoint.wrongState", this.state));
         }
     }
 
 
-    private record StateUpdateSendHandler(SendHandler handler,
-                                          StateMachine stateMachine) implements SendHandler {
+    private static class StateUpdateSendHandler implements SendHandler {
+
+        private final SendHandler handler;
+        private final StateMachine stateMachine;
+
+        public StateUpdateSendHandler(SendHandler handler, StateMachine stateMachine) {
+            this.handler = handler;
+            this.stateMachine = stateMachine;
+        }
+
         @Override
         public void onResult(SendResult result) {
             if (result.isOK()) {
