@@ -17,7 +17,10 @@
 package org.apache.tomcat.websocket;
 
 import java.io.EOFException;
+import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.InetSocketAddress;
 import java.net.Proxy;
 import java.net.ProxySelector;
@@ -28,9 +31,9 @@ import java.nio.ByteBuffer;
 import java.nio.channels.AsynchronousChannelGroup;
 import java.nio.channels.AsynchronousSocketChannel;
 import java.nio.charset.StandardCharsets;
+import java.security.KeyStore;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Base64;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -50,25 +53,27 @@ import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLEngine;
 import javax.net.ssl.SSLException;
 import javax.net.ssl.SSLParameters;
-
-import jakarta.websocket.ClientEndpoint;
-import jakarta.websocket.ClientEndpointConfig;
-import jakarta.websocket.CloseReason;
-import jakarta.websocket.CloseReason.CloseCodes;
-import jakarta.websocket.DeploymentException;
-import jakarta.websocket.Endpoint;
-import jakarta.websocket.Extension;
-import jakarta.websocket.HandshakeResponse;
-import jakarta.websocket.Session;
-import jakarta.websocket.WebSocketContainer;
+import javax.net.ssl.TrustManagerFactory;
+import javax.websocket.ClientEndpoint;
+import javax.websocket.ClientEndpointConfig;
+import javax.websocket.CloseReason;
+import javax.websocket.CloseReason.CloseCodes;
+import javax.websocket.DeploymentException;
+import javax.websocket.Endpoint;
+import javax.websocket.Extension;
+import javax.websocket.HandshakeResponse;
+import javax.websocket.Session;
+import javax.websocket.WebSocketContainer;
 
 import org.apache.juli.logging.Log;
 import org.apache.juli.logging.LogFactory;
 import org.apache.tomcat.InstanceManager;
-import org.apache.tomcat.InstanceManagerBindings;
 import org.apache.tomcat.util.buf.StringUtils;
+import org.apache.tomcat.util.codec.binary.Base64;
 import org.apache.tomcat.util.collections.CaseInsensitiveKeyMap;
 import org.apache.tomcat.util.res.StringManager;
+import org.apache.tomcat.util.security.KeyStoreUtil;
+import org.apache.tomcat.websocket.pojo.PojoEndpointClient;
 
 public class WsWebSocketContainer implements WebSocketContainer, BackgroundProcess {
 
@@ -78,7 +83,8 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
     private static final byte[] GET_BYTES = "GET ".getBytes(StandardCharsets.ISO_8859_1);
     private static final byte[] ROOT_URI_BYTES = "/".getBytes(StandardCharsets.ISO_8859_1);
-    private static final byte[] HTTP_VERSION_BYTES = " HTTP/1.1\r\n".getBytes(StandardCharsets.ISO_8859_1);
+    private static final byte[] HTTP_VERSION_BYTES =
+            " HTTP/1.1\r\n".getBytes(StandardCharsets.ISO_8859_1);
 
     private volatile AsynchronousChannelGroup asynchronousChannelGroup = null;
     private final Object asynchronousChannelGroupLock = new Object();
@@ -87,7 +93,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     // Server side uses the endpoint path as the key
     // Client side uses the client endpoint instance
     private final Map<Object, Set<WsSession>> endpointSessionMap = new HashMap<>();
-    private final Map<WsSession, WsSession> sessions = new ConcurrentHashMap<>();
+    private final Map<WsSession,WsSession> sessions = new ConcurrentHashMap<>();
     private final Object endPointSessionMapLock = new Object();
 
     private long defaultAsyncTimeout = -1;
@@ -99,11 +105,8 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
     private InstanceManager instanceManager;
 
-    protected InstanceManager getInstanceManager(ClassLoader classLoader) {
-        if (instanceManager != null) {
-            return instanceManager;
-        }
-        return InstanceManagerBindings.get(classLoader);
+    InstanceManager getInstanceManager() {
+        return instanceManager;
     }
 
     protected void setInstanceManager(InstanceManager instanceManager) {
@@ -111,37 +114,30 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     }
 
     @Override
-    public Session connectToServer(Object pojo, URI path) throws DeploymentException {
-        ClientEndpointConfig config = createClientEndpointConfig(pojo.getClass());
-        ClientEndpointHolder holder = new PojoHolder(pojo, config);
-        return connectToServerRecursive(holder, config, path, new HashSet<>());
-    }
-
-
-    @Override
-    public Session connectToServer(Class<?> annotatedEndpointClass, URI path) throws DeploymentException {
-        ClientEndpointConfig config = createClientEndpointConfig(annotatedEndpointClass);
-        ClientEndpointHolder holder = new PojoClassHolder(annotatedEndpointClass, config);
-        return connectToServerRecursive(holder, config, path, new HashSet<>());
-    }
-
-
-    private ClientEndpointConfig createClientEndpointConfig(Class<?> annotatedEndpointClass)
+    public Session connectToServer(Object pojo, URI path)
             throws DeploymentException {
-        ClientEndpoint annotation = annotatedEndpointClass.getAnnotation(ClientEndpoint.class);
+
+        ClientEndpoint annotation =
+                pojo.getClass().getAnnotation(ClientEndpoint.class);
         if (annotation == null) {
             throw new DeploymentException(
-                    sm.getString("wsWebSocketContainer.missingAnnotation", annotatedEndpointClass.getName()));
+                    sm.getString("wsWebSocketContainer.missingAnnotation",
+                            pojo.getClass().getName()));
         }
 
-        Class<? extends ClientEndpointConfig.Configurator> configuratorClazz = annotation.configurator();
+        Endpoint ep = new PojoEndpointClient(pojo, Arrays.asList(annotation.decoders()));
+
+        Class<? extends ClientEndpointConfig.Configurator> configuratorClazz =
+                annotation.configurator();
 
         ClientEndpointConfig.Configurator configurator = null;
-        if (!ClientEndpointConfig.Configurator.class.equals(configuratorClazz)) {
+        if (!ClientEndpointConfig.Configurator.class.equals(
+                configuratorClazz)) {
             try {
                 configurator = configuratorClazz.getConstructor().newInstance();
             } catch (ReflectiveOperationException e) {
-                throw new DeploymentException(sm.getString("wsWebSocketContainer.defaultConfiguratorFail"), e);
+                throw new DeploymentException(sm.getString(
+                        "wsWebSocketContainer.defaultConfiguratorFail"), e);
             }
         }
 
@@ -150,35 +146,61 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         if (configurator != null) {
             builder.configurator(configurator);
         }
-        return builder.decoders(Arrays.asList(annotation.decoders()))
-                .encoders(Arrays.asList(annotation.encoders()))
-                .preferredSubprotocols(Arrays.asList(annotation.subprotocols())).build();
+        ClientEndpointConfig config = builder.
+                decoders(Arrays.asList(annotation.decoders())).
+                encoders(Arrays.asList(annotation.encoders())).
+                preferredSubprotocols(Arrays.asList(annotation.subprotocols())).
+                build();
+        return connectToServer(ep, config, path);
     }
 
 
     @Override
-    public Session connectToServer(Class<? extends Endpoint> clazz, ClientEndpointConfig clientEndpointConfiguration,
-            URI path) throws DeploymentException {
-        ClientEndpointHolder holder = new EndpointClassHolder(clazz);
-        return connectToServerRecursive(holder, clientEndpointConfiguration, path, new HashSet<>());
-    }
-
-
-    @Override
-    public Session connectToServer(Endpoint endpoint, ClientEndpointConfig clientEndpointConfiguration, URI path)
-            throws DeploymentException {
-        ClientEndpointHolder holder = new EndpointHolder(endpoint);
-        return connectToServerRecursive(holder, clientEndpointConfiguration, path, new HashSet<>());
-    }
-
-
-    private Session connectToServerRecursive(ClientEndpointHolder clientEndpointHolder,
-            ClientEndpointConfig clientEndpointConfiguration, URI path, Set<URI> redirectSet)
+    public Session connectToServer(Class<?> annotatedEndpointClass, URI path)
             throws DeploymentException {
 
-        if (log.isTraceEnabled()) {
-            log.trace(sm.getString("wsWebSocketContainer.connect.entry", clientEndpointHolder.getClassName(), path));
+        Object pojo;
+        try {
+            pojo = annotatedEndpointClass.getConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
+            throw new DeploymentException(sm.getString(
+                    "wsWebSocketContainer.endpointCreateFail",
+                    annotatedEndpointClass.getName()), e);
         }
+
+        return connectToServer(pojo, path);
+    }
+
+
+    @Override
+    public Session connectToServer(Class<? extends Endpoint> clazz,
+            ClientEndpointConfig clientEndpointConfiguration, URI path)
+            throws DeploymentException {
+
+        Endpoint endpoint;
+        try {
+            endpoint = clazz.getConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
+            throw new DeploymentException(sm.getString(
+                    "wsWebSocketContainer.endpointCreateFail", clazz.getName()),
+                    e);
+        }
+
+        return connectToServer(endpoint, clientEndpointConfiguration, path);
+    }
+
+
+    @Override
+    public Session connectToServer(Endpoint endpoint,
+            ClientEndpointConfig clientEndpointConfiguration, URI path)
+            throws DeploymentException {
+        return connectToServerRecursive(endpoint, clientEndpointConfiguration, path, new HashSet<>());
+    }
+
+    private Session connectToServerRecursive(Endpoint endpoint,
+            ClientEndpointConfig clientEndpointConfiguration, URI path,
+            Set<URI> redirectSet)
+            throws DeploymentException {
 
         boolean secure = false;
         ByteBuffer proxyConnect = null;
@@ -192,13 +214,15 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             proxyPath = URI.create("https" + path.toString().substring(3));
             secure = true;
         } else {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.pathWrongScheme", scheme));
+            throw new DeploymentException(sm.getString(
+                    "wsWebSocketContainer.pathWrongScheme", scheme));
         }
 
         // Validate host
         String host = path.getHost();
         if (host == null) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.pathNoHost"));
+            throw new DeploymentException(
+                    sm.getString("wsWebSocketContainer.pathNoHost"));
         }
         int port = path.getPort();
 
@@ -211,7 +235,8 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         for (Proxy proxy : proxies) {
             if (proxy.type().equals(Proxy.Type.HTTP)) {
                 sa = proxy.address();
-                if (sa instanceof InetSocketAddress inet) {
+                if (sa instanceof InetSocketAddress) {
+                    InetSocketAddress inet = (InetSocketAddress) sa;
                     if (inet.isUnresolved()) {
                         sa = new InetSocketAddress(inet.getHostName(), inet.getPort());
                     }
@@ -232,38 +257,40 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             }
         }
 
-        Map<String, Object> userProperties = clientEndpointConfiguration.getUserProperties();
-
         // If sa is null, no proxy is configured so need to create sa
         if (sa == null) {
             sa = new InetSocketAddress(host, port);
         } else {
-            proxyConnect = createProxyRequest(host, port,
-                    (String) userProperties.get(Constants.PROXY_AUTHORIZATION_HEADER_NAME));
+            proxyConnect = createProxyRequest(host, port);
         }
 
         // Create the initial HTTP request to open the WebSocket connection
-        Map<String, List<String>> reqHeaders = createRequestHeaders(host, port, secure, clientEndpointConfiguration);
+        Map<String, List<String>> reqHeaders = createRequestHeaders(host, port, secure,
+                clientEndpointConfiguration);
         clientEndpointConfiguration.getConfigurator().beforeRequest(reqHeaders);
-        if (Constants.DEFAULT_ORIGIN_HEADER_VALUE != null && !reqHeaders.containsKey(Constants.ORIGIN_HEADER_NAME)) {
+        if (Constants.DEFAULT_ORIGIN_HEADER_VALUE != null
+                && !reqHeaders.containsKey(Constants.ORIGIN_HEADER_NAME)) {
             List<String> originValues = new ArrayList<>(1);
             originValues.add(Constants.DEFAULT_ORIGIN_HEADER_VALUE);
             reqHeaders.put(Constants.ORIGIN_HEADER_NAME, originValues);
         }
         ByteBuffer request = createRequest(path, reqHeaders);
 
+        AsynchronousSocketChannel socketChannel;
+        try {
+            socketChannel = AsynchronousSocketChannel.open(getAsynchronousChannelGroup());
+        } catch (IOException ioe) {
+            throw new DeploymentException(sm.getString(
+                    "wsWebSocketContainer.asynchronousSocketChannelFail"), ioe);
+        }
+
+        Map<String,Object> userProperties = clientEndpointConfiguration.getUserProperties();
+
         // Get the connection timeout
         long timeout = Constants.IO_TIMEOUT_MS_DEFAULT;
         String timeoutValue = (String) userProperties.get(Constants.IO_TIMEOUT_MS_PROPERTY);
         if (timeoutValue != null) {
             timeout = Long.valueOf(timeoutValue).intValue();
-        }
-
-        AsynchronousSocketChannel socketChannel;
-        try {
-            socketChannel = AsynchronousSocketChannel.open(getAsynchronousChannelGroup());
-        } catch (IOException ioe) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.asynchronousSocketChannelFail"), ioe);
         }
 
         // Set-up
@@ -273,125 +300,162 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         boolean success = false;
         List<Extension> extensionsAgreed = new ArrayList<>();
         Transformation transformation = null;
+
+        // Open the connection
+        Future<Void> fConnect = socketChannel.connect(sa);
         AsyncChannelWrapper channel = null;
 
-        try {
-            // Open the connection
-            Future<Void> fConnect = socketChannel.connect(sa);
-
-            if (proxyConnect != null) {
+        if (proxyConnect != null) {
+            try {
                 fConnect.get(timeout, TimeUnit.MILLISECONDS);
                 // Proxy CONNECT is clear text
                 channel = new AsyncChannelWrapperNonSecure(socketChannel);
                 writeRequest(channel, proxyConnect, timeout);
                 HttpResponse httpResponse = processResponse(response, channel, timeout);
-                if (httpResponse.status == Constants.PROXY_AUTHENTICATION_REQUIRED) {
-                    return processAuthenticationChallenge(clientEndpointHolder, clientEndpointConfiguration, path,
-                            redirectSet, userProperties, request, httpResponse, AuthenticationType.PROXY);
-                } else if (httpResponse.status() != 200) {
-                    throw new DeploymentException(sm.getString("wsWebSocketContainer.proxyConnectFail", selectedProxy,
-                            Integer.toString(httpResponse.status())));
+                if (httpResponse.getStatus() != 200) {
+                    throw new DeploymentException(sm.getString(
+                            "wsWebSocketContainer.proxyConnectFail", selectedProxy,
+                            Integer.toString(httpResponse.getStatus())));
                 }
+            } catch (TimeoutException | InterruptedException | ExecutionException |
+                    EOFException e) {
+                if (channel != null) {
+                    channel.close();
+                }
+                throw new DeploymentException(
+                        sm.getString("wsWebSocketContainer.httpRequestFailed"), e);
             }
+        }
 
-            if (secure) {
-                // Regardless of whether a non-secure wrapper was created for a
-                // proxy CONNECT, need to use TLS from this point on so wrap the
-                // original AsynchronousSocketChannel
-                SSLEngine sslEngine = createSSLEngine(clientEndpointConfiguration, host, port);
-                channel = new AsyncChannelWrapperSecure(socketChannel, sslEngine);
-            } else if (channel == null) {
-                // Only need to wrap as this point if it wasn't wrapped to process a
-                // proxy CONNECT
-                channel = new AsyncChannelWrapperNonSecure(socketChannel);
-            }
+        if (secure) {
+            // Regardless of whether a non-secure wrapper was created for a
+            // proxy CONNECT, need to use TLS from this point on so wrap the
+            // original AsynchronousSocketChannel
+            SSLEngine sslEngine = createSSLEngine(userProperties, host, port);
+            channel = new AsyncChannelWrapperSecure(socketChannel, sslEngine);
+        } else if (channel == null) {
+            // Only need to wrap as this point if it wasn't wrapped to process a
+            // proxy CONNECT
+            channel = new AsyncChannelWrapperNonSecure(socketChannel);
+        }
 
+        try {
             fConnect.get(timeout, TimeUnit.MILLISECONDS);
 
             Future<Void> fHandshake = channel.handshake();
             fHandshake.get(timeout, TimeUnit.MILLISECONDS);
 
-            if (log.isTraceEnabled()) {
-                SocketAddress localAddress = null;
-                try {
-                    localAddress = channel.getLocalAddress();
-                } catch (IOException ioe) {
-                    // Ignore
-                }
-                log.trace(sm.getString("wsWebSocketContainer.connect.write", Integer.valueOf(request.position()),
-                        Integer.valueOf(request.limit()), localAddress));
-            }
             writeRequest(channel, request, timeout);
 
             HttpResponse httpResponse = processResponse(response, channel, timeout);
 
             // Check maximum permitted redirects
             int maxRedirects = Constants.MAX_REDIRECTIONS_DEFAULT;
-            String maxRedirectsValue = (String) userProperties.get(Constants.MAX_REDIRECTIONS_PROPERTY);
+            String maxRedirectsValue =
+                    (String) userProperties.get(Constants.MAX_REDIRECTIONS_PROPERTY);
             if (maxRedirectsValue != null) {
                 maxRedirects = Integer.parseInt(maxRedirectsValue);
             }
 
             if (httpResponse.status != 101) {
-                if (isRedirectStatus(httpResponse.status)) {
-                    List<String> locationHeader = httpResponse.handshakeResponse().getHeaders()
-                            .get(Constants.LOCATION_HEADER_NAME);
+                if(isRedirectStatus(httpResponse.status)){
+                    List<String> locationHeader =
+                            httpResponse.getHandshakeResponse().getHeaders().get(
+                                    Constants.LOCATION_HEADER_NAME);
 
-                    if (locationHeader == null || locationHeader.isEmpty() || locationHeader.getFirst() == null ||
-                            locationHeader.getFirst().isEmpty()) {
-                        throw new DeploymentException(sm.getString("wsWebSocketContainer.missingLocationHeader",
+                    if (locationHeader == null || locationHeader.isEmpty() ||
+                            locationHeader.get(0) == null || locationHeader.get(0).isEmpty()) {
+                        throw new DeploymentException(sm.getString(
+                                "wsWebSocketContainer.missingLocationHeader",
                                 Integer.toString(httpResponse.status)));
                     }
 
-                    URI redirectLocation = URI.create(locationHeader.getFirst()).normalize();
+                    URI redirectLocation = URI.create(locationHeader.get(0)).normalize();
 
                     if (!redirectLocation.isAbsolute()) {
                         redirectLocation = path.resolve(redirectLocation);
                     }
 
-                    String redirectScheme = redirectLocation.getScheme().toLowerCase(Locale.ENGLISH);
+                    String redirectScheme = redirectLocation.getScheme().toLowerCase();
 
                     if (redirectScheme.startsWith("http")) {
-                        redirectLocation = new URI(redirectScheme.replace("http", "ws"), redirectLocation.getUserInfo(),
-                                redirectLocation.getHost(), redirectLocation.getPort(), redirectLocation.getPath(),
+                        redirectLocation = new URI(redirectScheme.replace("http", "ws"),
+                                redirectLocation.getUserInfo(), redirectLocation.getHost(),
+                                redirectLocation.getPort(), redirectLocation.getPath(),
                                 redirectLocation.getQuery(), redirectLocation.getFragment());
                     }
 
                     if (!redirectSet.add(redirectLocation) || redirectSet.size() > maxRedirects) {
-                        throw new DeploymentException(
-                                sm.getString("wsWebSocketContainer.redirectThreshold", redirectLocation,
-                                        Integer.toString(redirectSet.size()), Integer.toString(maxRedirects)));
+                        throw new DeploymentException(sm.getString(
+                                "wsWebSocketContainer.redirectThreshold", redirectLocation,
+                                Integer.toString(redirectSet.size()),
+                                Integer.toString(maxRedirects)));
                     }
 
-                    return connectToServerRecursive(clientEndpointHolder, clientEndpointConfiguration, redirectLocation,
-                            redirectSet);
+                    return connectToServerRecursive(endpoint, clientEndpointConfiguration, redirectLocation, redirectSet);
 
-                } else if (httpResponse.status == Constants.UNAUTHORIZED) {
-                    return processAuthenticationChallenge(clientEndpointHolder, clientEndpointConfiguration, path,
-                            redirectSet, userProperties, request, httpResponse, AuthenticationType.WWW);
+                }
+
+                else if (httpResponse.status == 401) {
+
+                    if (userProperties.get(Constants.AUTHORIZATION_HEADER_NAME) != null) {
+                        throw new DeploymentException(sm.getString(
+                                "wsWebSocketContainer.failedAuthentication",
+                                Integer.valueOf(httpResponse.status)));
+                    }
+
+                    List<String> wwwAuthenticateHeaders = httpResponse.getHandshakeResponse()
+                            .getHeaders().get(Constants.WWW_AUTHENTICATE_HEADER_NAME);
+
+                    if (wwwAuthenticateHeaders == null || wwwAuthenticateHeaders.isEmpty() ||
+                            wwwAuthenticateHeaders.get(0) == null || wwwAuthenticateHeaders.get(0).isEmpty()) {
+                        throw new DeploymentException(sm.getString(
+                                "wsWebSocketContainer.missingWWWAuthenticateHeader",
+                                Integer.toString(httpResponse.status)));
+                    }
+
+                    String authScheme = wwwAuthenticateHeaders.get(0).split("\\s+", 2)[0];
+                    String requestUri = new String(request.array(), StandardCharsets.ISO_8859_1)
+                            .split("\\s", 3)[1];
+
+                    Authenticator auth = AuthenticatorFactory.getAuthenticator(authScheme);
+
+                    if (auth == null) {
+                        throw new DeploymentException(
+                                sm.getString("wsWebSocketContainer.unsupportedAuthScheme",
+                                        Integer.valueOf(httpResponse.status), authScheme));
+                    }
+
+                    userProperties.put(Constants.AUTHORIZATION_HEADER_NAME, auth.getAuthorization(
+                            requestUri, wwwAuthenticateHeaders.get(0), userProperties));
+
+                    return connectToServerRecursive(endpoint, clientEndpointConfiguration, path, redirectSet);
 
                 } else {
-                    throw new DeploymentException(
-                            sm.getString("wsWebSocketContainer.invalidStatus", Integer.toString(httpResponse.status)));
+                    throw new DeploymentException(sm.getString("wsWebSocketContainer.invalidStatus",
+                            Integer.toString(httpResponse.status)));
                 }
             }
-            HandshakeResponse handshakeResponse = httpResponse.handshakeResponse();
+            HandshakeResponse handshakeResponse = httpResponse.getHandshakeResponse();
             clientEndpointConfiguration.getConfigurator().afterResponse(handshakeResponse);
 
             // Sub-protocol
-            List<String> protocolHeaders = handshakeResponse.getHeaders().get(Constants.WS_PROTOCOL_HEADER_NAME);
-            if (protocolHeaders == null || protocolHeaders.isEmpty()) {
+            List<String> protocolHeaders = handshakeResponse.getHeaders().get(
+                    Constants.WS_PROTOCOL_HEADER_NAME);
+            if (protocolHeaders == null || protocolHeaders.size() == 0) {
                 subProtocol = null;
             } else if (protocolHeaders.size() == 1) {
-                subProtocol = protocolHeaders.getFirst();
+                subProtocol = protocolHeaders.get(0);
             } else {
-                throw new DeploymentException(sm.getString("wsWebSocketContainer.invalidSubProtocol"));
+                throw new DeploymentException(
+                        sm.getString("wsWebSocketContainer.invalidSubProtocol"));
             }
 
             // Extensions
             // Should normally only be one header but handle the case of
             // multiple headers
-            List<String> extHeaders = handshakeResponse.getHeaders().get(Constants.WS_EXTENSIONS_HEADER_NAME);
+            List<String> extHeaders = handshakeResponse.getHeaders().get(
+                    Constants.WS_EXTENSIONS_HEADER_NAME);
             if (extHeaders != null) {
                 for (String extHeader : extHeaders) {
                     Util.parseExtensionHeader(extensionsAgreed, extHeader);
@@ -405,7 +469,8 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
                 wrapper.add(extension.getParameters());
                 Transformation t = factory.create(extension.getName(), wrapper, false);
                 if (t == null) {
-                    throw new DeploymentException(sm.getString("wsWebSocketContainer.invalidExtensionParameters"));
+                    throw new DeploymentException(sm.getString(
+                            "wsWebSocketContainer.invalidExtensionParameters"));
                 }
                 if (transformation == null) {
                     transformation = t;
@@ -415,44 +480,41 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             }
 
             success = true;
-        } catch (ExecutionException | InterruptedException | SSLException | EOFException | TimeoutException
-                | URISyntaxException | AuthenticationException e) {
+        } catch (ExecutionException | InterruptedException | SSLException |
+                EOFException | TimeoutException | URISyntaxException | AuthenticationException e) {
             throw new DeploymentException(sm.getString("wsWebSocketContainer.httpRequestFailed", path), e);
         } finally {
             if (!success) {
-                if (channel != null) {
-                    channel.close();
-                } else {
-                    try {
-                        socketChannel.close();
-                    } catch (IOException ioe) {
-                        // Ignore
-                    }
-                }
+                channel.close();
             }
         }
 
         // Switch to WebSocket
         WsRemoteEndpointImplClient wsRemoteEndpointClient = new WsRemoteEndpointImplClient(channel);
 
-        WsSession wsSession = new WsSession(clientEndpointHolder, wsRemoteEndpointClient, this, extensionsAgreed,
-                subProtocol, Collections.emptyMap(), secure, clientEndpointConfiguration);
+        WsSession wsSession = new WsSession(endpoint, wsRemoteEndpointClient,
+                this, null, null, null, null, null, extensionsAgreed,
+                subProtocol, Collections.<String,String>emptyMap(), secure,
+                clientEndpointConfiguration);
 
-        WsFrameClient wsFrameClient = new WsFrameClient(response, channel, wsSession, transformation);
+        WsFrameClient wsFrameClient = new WsFrameClient(response, channel,
+                wsSession, transformation);
         // WsFrame adds the necessary final transformations. Copy the
         // completed transformation chain to the remote end point.
         wsRemoteEndpointClient.setTransformation(wsFrameClient.getTransformation());
 
-        wsSession.getLocal().onOpen(wsSession, clientEndpointConfiguration);
-        registerSession(wsSession.getLocal(), wsSession);
+        endpoint.onOpen(wsSession, clientEndpointConfiguration);
+        registerSession(endpoint, wsSession);
 
-        /*
-         * It is possible that the server sent one or more messages as soon as the WebSocket connection was established.
-         * Depending on the exact timing of when those messages were sent they could be sat in the input buffer waiting
-         * to be read and will not trigger a "data available to read" event. Therefore, it is necessary to process the
-         * input buffer here. Note that this happens on the current thread which means that this thread will be used for
-         * any onMessage notifications. This is a special case. Subsequent "data available to read" events will be
-         * handled by threads from the AsyncChannelGroup's executor.
+        /* It is possible that the server sent one or more messages as soon as
+         * the WebSocket connection was established. Depending on the exact
+         * timing of when those messages were sent they could be sat in the
+         * input buffer waiting to be read and will not trigger a "data
+         * available to read" event. Therefore, it is necessary to process the
+         * input buffer here. Note that this happens on the current thread which
+         * means that this thread will be used for any onMessage notifications.
+         * This is a special case. Subsequent "data available to read" events
+         * will be handled by threads from the AsyncChannelGroup's executor.
          */
         wsFrameClient.startInputProcessing();
 
@@ -460,48 +522,8 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     }
 
 
-    private Session processAuthenticationChallenge(ClientEndpointHolder clientEndpointHolder,
-            ClientEndpointConfig clientEndpointConfiguration, URI path, Set<URI> redirectSet,
-            Map<String, Object> userProperties, ByteBuffer request, HttpResponse httpResponse,
-            AuthenticationType authenticationType) throws DeploymentException, AuthenticationException {
-
-        if (userProperties.get(authenticationType.getAuthorizationHeaderName()) != null) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.failedAuthentication",
-                    Integer.valueOf(httpResponse.status), authenticationType.getAuthorizationHeaderName()));
-        }
-
-        List<String> authenticateHeaders = httpResponse.handshakeResponse().getHeaders()
-                .get(authenticationType.getAuthenticateHeaderName());
-
-        if (authenticateHeaders == null || authenticateHeaders.isEmpty() || authenticateHeaders.getFirst() == null ||
-                authenticateHeaders.getFirst().isEmpty()) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.missingAuthenticateHeader",
-                    Integer.toString(httpResponse.status), authenticationType.getAuthenticateHeaderName()));
-        }
-
-        String authScheme = authenticateHeaders.getFirst().split("\\s+", 2)[0];
-
-        Authenticator auth = AuthenticatorFactory.getAuthenticator(authScheme);
-
-        if (auth == null) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.unsupportedAuthScheme",
-                    Integer.valueOf(httpResponse.status), authScheme));
-        }
-
-        String requestUri = new String(request.array(), StandardCharsets.ISO_8859_1).split("\\s", 3)[1];
-
-        userProperties.put(authenticationType.getAuthorizationHeaderName(),
-                auth.getAuthorization(requestUri, authenticateHeaders.getFirst(),
-                        (String) userProperties.get(authenticationType.getUserNameProperty()),
-                        (String) userProperties.get(authenticationType.getUserPasswordProperty()),
-                        (String) userProperties.get(authenticationType.getUserRealmProperty())));
-
-        return connectToServerRecursive(clientEndpointHolder, clientEndpointConfiguration, path, redirectSet);
-    }
-
-
-    private static void writeRequest(AsyncChannelWrapper channel, ByteBuffer request, long timeout)
-            throws TimeoutException, InterruptedException, ExecutionException {
+    private static void writeRequest(AsyncChannelWrapper channel, ByteBuffer request,
+            long timeout) throws TimeoutException, InterruptedException, ExecutionException {
         int toWrite = request.limit();
 
         Future<Integer> fWrite = channel.write(request);
@@ -521,23 +543,23 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         boolean isRedirect = false;
 
         switch (httpResponseCode) {
-            case Constants.MULTIPLE_CHOICES:
-            case Constants.MOVED_PERMANENTLY:
-            case Constants.FOUND:
-            case Constants.SEE_OTHER:
-            case Constants.USE_PROXY:
-            case Constants.TEMPORARY_REDIRECT:
-                isRedirect = true;
-                break;
-            default:
-                break;
+        case Constants.MULTIPLE_CHOICES:
+        case Constants.MOVED_PERMANENTLY:
+        case Constants.FOUND:
+        case Constants.SEE_OTHER:
+        case Constants.USE_PROXY:
+        case Constants.TEMPORARY_REDIRECT:
+            isRedirect = true;
+            break;
+        default:
+            break;
         }
 
         return isRedirect;
     }
 
 
-    private static ByteBuffer createProxyRequest(String host, int port, String authorizationHeader) {
+    private static ByteBuffer createProxyRequest(String host, int port) {
         StringBuilder request = new StringBuilder();
         request.append("CONNECT ");
         request.append(host);
@@ -548,13 +570,6 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         request.append(host);
         request.append(':');
         request.append(port);
-
-        if (authorizationHeader != null) {
-            request.append("\r\n");
-            request.append(Constants.PROXY_AUTHORIZATION_HEADER_NAME);
-            request.append(':');
-            request.append(authorizationHeader);
-        }
 
         request.append("\r\n\r\n");
 
@@ -569,10 +584,15 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             return;
         }
         synchronized (endPointSessionMapLock) {
-            if (endpointSessionMap.isEmpty()) {
+            if (endpointSessionMap.size() == 0) {
                 BackgroundProcessManager.getInstance().register(this);
             }
-            endpointSessionMap.computeIfAbsent(key, k -> new HashSet<>()).add(wsSession);
+            Set<WsSession> wsSessions = endpointSessionMap.get(key);
+            if (wsSessions == null) {
+                wsSessions = new HashSet<>();
+                endpointSessionMap.put(key, wsSessions);
+            }
+            wsSessions.add(wsSession);
         }
         sessions.put(wsSession, wsSession);
     }
@@ -584,11 +604,11 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             Set<WsSession> wsSessions = endpointSessionMap.get(key);
             if (wsSessions != null) {
                 wsSessions.remove(wsSession);
-                if (wsSessions.isEmpty()) {
+                if (wsSessions.size() == 0) {
                     endpointSessionMap.remove(key);
                 }
             }
-            if (endpointSessionMap.isEmpty()) {
+            if (endpointSessionMap.size() == 0) {
                 BackgroundProcessManager.getInstance().unregister(this);
             }
         }
@@ -601,19 +621,14 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         synchronized (endPointSessionMapLock) {
             Set<WsSession> sessions = endpointSessionMap.get(key);
             if (sessions != null) {
-                // Some sessions may be in the process of closing
-                for (WsSession session : sessions) {
-                    if (session.isOpen()) {
-                        result.add(session);
-                    }
-                }
+                result.addAll(sessions);
             }
         }
         return result;
     }
 
-    private static Map<String, List<String>> createRequestHeaders(String host, int port, boolean secure,
-            ClientEndpointConfig clientEndpointConfiguration) {
+    private static Map<String, List<String>> createRequestHeaders(String host, int port,
+            boolean secure, ClientEndpointConfig clientEndpointConfiguration) {
 
         Map<String, List<String>> headers = new HashMap<>();
         List<Extension> extensions = clientEndpointConfiguration.getExtensions();
@@ -658,13 +673,14 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         headers.put(Constants.WS_KEY_HEADER_NAME, wsKeyValues);
 
         // WebSocket sub-protocols
-        if (subProtocols != null && !subProtocols.isEmpty()) {
+        if (subProtocols != null && subProtocols.size() > 0) {
             headers.put(Constants.WS_PROTOCOL_HEADER_NAME, subProtocols);
         }
 
         // WebSocket extensions
-        if (extensions != null && !extensions.isEmpty()) {
-            headers.put(Constants.WS_EXTENSIONS_HEADER_NAME, generateExtensionHeaders(extensions));
+        if (extensions != null && extensions.size() > 0) {
+            headers.put(Constants.WS_EXTENSIONS_HEADER_NAME,
+                    generateExtensionHeaders(extensions));
         }
 
         return headers;
@@ -680,7 +696,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
                 header.append(';');
                 header.append(param.getName());
                 String value = param.getValue();
-                if (value != null && !value.isEmpty()) {
+                if (value != null && value.length() > 0) {
                     header.append('=');
                     header.append(value);
                 }
@@ -694,17 +710,16 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     private static String generateWsKeyValue() {
         byte[] keyBytes = new byte[16];
         RANDOM.nextBytes(keyBytes);
-        return Base64.getEncoder().encodeToString(keyBytes);
+        return Base64.encodeBase64String(keyBytes);
     }
 
 
-    private static ByteBuffer createRequest(URI uri, Map<String, List<String>> reqHeaders) {
+    private static ByteBuffer createRequest(URI uri, Map<String,List<String>> reqHeaders) {
         ByteBuffer result = ByteBuffer.allocate(4 * 1024);
 
         // Request line
         result.put(GET_BYTES);
-        final String path = uri.getPath();
-        if (null == path || path.isEmpty()) {
+        if (null == uri.getPath() || "".equals(uri.getPath())) {
             result.put(ROOT_URI_BYTES);
         } else {
             result.put(uri.getRawPath().getBytes(StandardCharsets.ISO_8859_1));
@@ -763,16 +778,17 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
     /**
      * Process response, blocking until HTTP response has been fully received.
-     *
-     * @throws ExecutionException   if there is an exception reading the response
-     * @throws InterruptedException if the thread is interrupted while reading the response
-     * @throws DeploymentException  if the response status line is not correctly formatted
-     * @throws TimeoutException     if the response was not read within the expected timeout
+     * @throws ExecutionException
+     * @throws InterruptedException
+     * @throws DeploymentException
+     * @throws TimeoutException
      */
-    private HttpResponse processResponse(ByteBuffer response, AsyncChannelWrapper channel, long timeout)
-            throws InterruptedException, ExecutionException, DeploymentException, EOFException, TimeoutException {
+    private HttpResponse processResponse(ByteBuffer response,
+            AsyncChannelWrapper channel, long timeout) throws InterruptedException,
+            ExecutionException, DeploymentException, EOFException,
+            TimeoutException {
 
-        Map<String, List<String>> headers = new CaseInsensitiveKeyMap<>();
+        Map<String,List<String>> headers = new CaseInsensitiveKeyMap<>();
 
         int status = 0;
         boolean readStatus = false;
@@ -784,18 +800,9 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             response.clear();
             // Blocking read
             Future<Integer> read = channel.read(response);
-            Integer bytesRead;
-            try {
-                bytesRead = read.get(timeout, TimeUnit.MILLISECONDS);
-            } catch (TimeoutException e) {
-                TimeoutException te = new TimeoutException(
-                        sm.getString("wsWebSocketContainer.responseFail", Integer.toString(status), headers));
-                te.initCause(e);
-                throw te;
-            }
+            Integer bytesRead = read.get(timeout, TimeUnit.MILLISECONDS);
             if (bytesRead.intValue() == -1) {
-                throw new EOFException(
-                        sm.getString("wsWebSocketContainer.responseFail", Integer.toString(status), headers));
+                throw new EOFException();
             }
             response.flip();
             while (response.hasRemaining() && !readHeaders) {
@@ -828,17 +835,19 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         String[] parts = line.trim().split(" ");
         // CONNECT for proxy may return a 1.0 response
         if (parts.length < 2 || !("HTTP/1.0".equals(parts[0]) || "HTTP/1.1".equals(parts[0]))) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.invalidStatus", line));
+            throw new DeploymentException(sm.getString(
+                    "wsWebSocketContainer.invalidStatus", line));
         }
         try {
             return Integer.parseInt(parts[1]);
         } catch (NumberFormatException nfe) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.invalidStatus", line));
+            throw new DeploymentException(sm.getString(
+                    "wsWebSocketContainer.invalidStatus", line));
         }
     }
 
 
-    private void parseHeaders(String line, Map<String, List<String>> headers) {
+    private void parseHeaders(String line, Map<String,List<String>> headers) {
         // Treat headers as single values by default.
 
         int index = line.indexOf(':');
@@ -846,13 +855,17 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
             log.warn(sm.getString("wsWebSocketContainer.invalidHeader", line));
             return;
         }
-        // Header names are case-insensitive so always use lower case
+        // Header names are case insensitive so always use lower case
         String headerName = line.substring(0, index).trim().toLowerCase(Locale.ENGLISH);
         // Multi-value headers are stored as a single header and the client is
         // expected to handle splitting into individual values
         String headerValue = line.substring(index + 1).trim();
 
-        List<String> values = headers.computeIfAbsent(headerName, k -> new ArrayList<>(1));
+        List<String> values = headers.get(headerName);
+        if (values == null) {
+            values = new ArrayList<>(1);
+            headers.put(headerName, values);
+        }
         values.add(headerValue);
     }
 
@@ -860,7 +873,7 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
         // All ISO-8859-1
         StringBuilder sb = new StringBuilder();
 
-        char c;
+        char c = 0;
         while (response.hasRemaining()) {
             c = (char) response.get();
             sb.append(c);
@@ -873,20 +886,51 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     }
 
 
-    private SSLEngine createSSLEngine(ClientEndpointConfig clientEndpointConfig, String host, int port)
+    private SSLEngine createSSLEngine(Map<String,Object> userProperties, String host, int port)
             throws DeploymentException {
 
         try {
             // See if a custom SSLContext has been provided
-            SSLContext sslContext = clientEndpointConfig.getSSLContext();
+            SSLContext sslContext =
+                    (SSLContext) userProperties.get(Constants.SSL_CONTEXT_PROPERTY);
 
             if (sslContext == null) {
                 // Create the SSL Context
                 sslContext = SSLContext.getInstance("TLS");
-                sslContext.init(null, null, null);
+
+                // Trust store
+                String sslTrustStoreValue =
+                        (String) userProperties.get(Constants.SSL_TRUSTSTORE_PROPERTY);
+                if (sslTrustStoreValue != null) {
+                    String sslTrustStorePwdValue = (String) userProperties.get(
+                            Constants.SSL_TRUSTSTORE_PWD_PROPERTY);
+                    if (sslTrustStorePwdValue == null) {
+                        sslTrustStorePwdValue = Constants.SSL_TRUSTSTORE_PWD_DEFAULT;
+                    }
+
+                    File keyStoreFile = new File(sslTrustStoreValue);
+                    KeyStore ks = KeyStore.getInstance("JKS");
+                    try (InputStream is = new FileInputStream(keyStoreFile)) {
+                        KeyStoreUtil.load(ks, is, sslTrustStorePwdValue.toCharArray());
+                    }
+
+                    TrustManagerFactory tmf = TrustManagerFactory.getInstance(
+                            TrustManagerFactory.getDefaultAlgorithm());
+                    tmf.init(ks);
+
+                    sslContext.init(null, tmf.getTrustManagers(), null);
+                } else {
+                    sslContext.init(null, null, null);
+                }
             }
 
             SSLEngine engine = sslContext.createSSLEngine(host, port);
+
+            String sslProtocolsValue =
+                    (String) userProperties.get(Constants.SSL_PROTOCOLS_PROPERTY);
+            if (sslProtocolsValue != null) {
+                engine.setEnabledProtocols(sslProtocolsValue.split(","));
+            }
 
             engine.setUseClientMode(true);
 
@@ -900,7 +944,8 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
             return engine;
         } catch (Exception e) {
-            throw new DeploymentException(sm.getString("wsWebSocketContainer.sslEngineFail"), e);
+            throw new DeploymentException(sm.getString(
+                    "wsWebSocketContainer.sslEngineFail"), e);
         }
     }
 
@@ -942,7 +987,9 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
 
     /**
-     * {@inheritDoc} Currently, this implementation does not support any extensions.
+     * {@inheritDoc}
+     *
+     * Currently, this implementation does not support any extensions.
      */
     @Override
     public Set<Extension> getInstalledExtensions() {
@@ -951,7 +998,9 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
 
     /**
-     * {@inheritDoc} The default value for this implementation is -1.
+     * {@inheritDoc}
+     *
+     * The default value for this implementation is -1.
      */
     @Override
     public long getDefaultAsyncSendTimeout() {
@@ -960,7 +1009,9 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
 
     /**
-     * {@inheritDoc} The default value for this implementation is -1.
+     * {@inheritDoc}
+     *
+     * The default value for this implementation is -1.
      */
     @Override
     public void setAsyncSendTimeout(long timeout) {
@@ -969,17 +1020,20 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
 
     /**
-     * Cleans up the resources still in use by WebSocket sessions created from this container. This includes closing
-     * sessions and cancelling {@link Future}s associated with blocking read/writes.
+     * Cleans up the resources still in use by WebSocket sessions created from
+     * this container. This includes closing sessions and cancelling
+     * {@link Future}s associated with blocking read/writes.
      */
     public void destroy() {
-        CloseReason cr = new CloseReason(CloseCodes.GOING_AWAY, sm.getString("wsWebSocketContainer.shutdown"));
+        CloseReason cr = new CloseReason(
+                CloseCodes.GOING_AWAY, sm.getString("wsWebSocketContainer.shutdown"));
 
         for (WsSession session : sessions.keySet()) {
             try {
                 session.close(cr);
             } catch (IOException ioe) {
-                log.debug(sm.getString("wsWebSocketContainer.sessionCloseFail", session.getId()), ioe);
+                log.debug(sm.getString(
+                        "wsWebSocketContainer.sessionCloseFail", session.getId()), ioe);
             }
         }
 
@@ -1017,14 +1071,12 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     @Override
     public void backgroundProcess() {
         // This method gets called once a second.
-        backgroundProcessCount++;
+        backgroundProcessCount ++;
         if (backgroundProcessCount >= processPeriod) {
             backgroundProcessCount = 0;
 
-            // Check all registered sessions.
             for (WsSession wsSession : sessions.keySet()) {
                 wsSession.checkExpiration();
-                wsSession.checkCloseTimeout();
             }
         }
 
@@ -1038,7 +1090,10 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
 
 
     /**
-     * {@inheritDoc} The default value is 10 which means session expirations are processed every 10 seconds.
+     * {@inheritDoc}
+     *
+     * The default value is 10 which means session expirations are processed
+     * every 10 seconds.
      */
     @Override
     public int getProcessPeriod() {
@@ -1046,6 +1101,23 @@ public class WsWebSocketContainer implements WebSocketContainer, BackgroundProce
     }
 
 
-    private record HttpResponse(int status, HandshakeResponse handshakeResponse) {
+    private static class HttpResponse {
+        private final int status;
+        private final HandshakeResponse handshakeResponse;
+
+        public HttpResponse(int status, HandshakeResponse handshakeResponse) {
+            this.status = status;
+            this.handshakeResponse = handshakeResponse;
+        }
+
+
+        public int getStatus() {
+            return status;
+        }
+
+
+        public HandshakeResponse getHandshakeResponse() {
+            return handshakeResponse;
+        }
     }
 }
